// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`game over overlay 1`] = `
"fillStyle=#0d0815
fillRect(0, 0, 800, 600)
save()
translate(0.355, -1.47)
save()
translate(0, 0)
fillStyle=#cbb8ff
globalAlpha=0.456
fillRect(728.962, 72.75, 1.213, 1.213)
globalAlpha=0.967
fillRect(151.24, 157.784, 0.811, 0.811)
globalAlpha=0.505
fillRect(273.915, 172.928, 1.366, 1.366)
globalAlpha=0.376
fillRect(1146.497, 221.814, 0.73, 0.73)
globalAlpha=0.431
fillRect(498.546, 196.28, 1.893, 1.893)
globalAlpha=0.616
fillRect(563.833, 61.937, 0.69, 0.69)
globalAlpha=0.962
fillRect(355.791, 328.817, 1.017, 1.017)
globalAlpha=0.607
fillRect(1099.5, 246.005, 0.824, 0.824)
globalAlpha=0.414
fillRect(238.753, 261.197, 1.504, 1.504)
globalAlpha=0.529
fillRect(379.048, 151.803, 1.431, 1.431)
globalAlpha=0.968
fillRect(867.714, 21.967, 1.387, 1.387)
globalAlpha=0.979
fillRect(1146.436, 109.475, 1.844, 1.844)
globalAlpha=0.981
fillRect(293.637, 263.707, 1.418, 1.418)
globalAlpha=1
fillRect(796.657, 11.137, 0.945, 0.945)
globalAlpha=0.696
fillRect(851.739, 294.133, 1.699, 1.699)
globalAlpha=0.946
fillRect(907.923, 75.899, 0.945, 0.945)
globalAlpha=0.546
fillRect(1160.027, 4.357, 1.746, 1.746)
globalAlpha=0.991
fillRect(419.298, 50.178, 1.122, 1.122)
globalAlpha=0.913
fillRect(1.408, 47.473, 1.171, 1.171)
globalAlpha=0.743
fillRect(992.396, 69.556, 0.777, 0.777)
globalAlpha=0.635
fillRect(1039.188, 259.132, 1.468, 1.468)
globalAlpha=0.974
fillRect(567.086, 199.79, 0.872, 0.872)
globalAlpha=0.993
fillRect(963.728, 295.418, 0.932, 0.932)
globalAlpha=0.973
fillRect(1070.7, 170.255, 1.742, 1.742)
globalAlpha=0.878
fillRect(513.059, 341.224, 1.164, 1.164)
globalAlpha=0.848
fillRect(237.91, 335.056, 1.619, 1.619)
globalAlpha=0.989
fillRect(434.148, 287.736, 1.187, 1.187)
globalAlpha=0.856
fillRect(1169.223, 228.552, 1.154, 1.154)
globalAlpha=0.523
fillRect(948.147, 184.439, 1.198, 1.198)
globalAlpha=0.905
fillRect(679.501, 279.098, 1.408, 1.408)
globalAlpha=0.758
fillRect(508.65, 145.019, 1.188, 1.188)
globalAlpha=0.901
fillRect(1085.152, 71.674, 1.424, 1.424)
globalAlpha=0.957
fillRect(728.004, 125.356, 1.88, 1.88)
globalAlpha=0.707
fillRect(816.019, 300.117, 1.176, 1.176)
globalAlpha=0.958
fillRect(558.395, 56.119, 1.661, 1.661)
globalAlpha=0.435
fillRect(174.579, 205.053, 1.635, 1.635)
globalAlpha=0.913
fillRect(685.067, 24.284, 0.618, 0.618)
globalAlpha=0.64
fillRect(866.286, 47.936, 1.474, 1.474)
globalAlpha=0.969
fillRect(307.074, 116.424, 1.813, 1.813)
globalAlpha=0.971
fillRect(1025.226, 20.072, 1.788, 1.788)
globalAlpha=0.659
fillRect(1172.858, 237.328, 1.025, 1.025)
globalAlpha=0.8
fillRect(1105.305, 262.581, 0.747, 0.747)
globalAlpha=1
fillRect(1117.725, 229.364, 0.895, 0.895)
globalAlpha=0.699
fillRect(744.464, 94.152, 1.329, 1.329)
globalAlpha=0.816
fillRect(525.118, 9.415, 1.846, 1.846)
globalAlpha=0.618
fillRect(432.777, 301.183, 0.709, 0.709)
globalAlpha=0.736
fillRect(313.354, 191.636, 1.987, 1.987)
globalAlpha=0.408
fillRect(167.114, 379.312, 0.905, 0.905)
globalAlpha=0.4
fillRect(723.197, 144.345, 1.53, 1.53)
globalAlpha=0.965
fillRect(268.091, 356.101, 0.824, 0.824)
globalAlpha=0.771
fillRect(114.769, 240.023, 1.857, 1.857)
globalAlpha=0.632
fillRect(970.801, 216.374, 0.85, 0.85)
globalAlpha=0.998
fillRect(981.66, 158.258, 0.963, 0.963)
globalAlpha=0.992
fillRect(566.051, 105.874, 1.555, 1.555)
globalAlpha=0.957
fillRect(522.518, 23, 1.179, 1.179)
globalAlpha=0.965
fillRect(180.779, 221.665, 1.649, 1.649)
globalAlpha=0.689
fillRect(735.758, 356.795, 0.698, 0.698)
globalAlpha=0.884
fillRect(26.876, 205.282, 1.935, 1.935)
globalAlpha=0.891
fillRect(440.13, 160.078, 0.811, 0.811)
globalAlpha=0.924
fillRect(875.624, 133.002, 1.161, 1.161)
globalAlpha=0.357
fillRect(585.972, 292.556, 1.209, 1.209)
globalAlpha=0.968
fillRect(1157.48, 26.237, 1.726, 1.726)
globalAlpha=0.937
fillRect(1087.423, 198.759, 1.995, 1.995)
globalAlpha=0.991
fillRect(194.279, 365.968, 1.602, 1.602)
globalAlpha=0.527
fillRect(397.758, 342.719, 1.016, 1.016)
globalAlpha=0.728
fillRect(945.187, 242.963, 0.904, 0.904)
globalAlpha=0.841
fillRect(457.183, 248.032, 1.197, 1.197)
globalAlpha=0.95
fillRect(112.736, 38.565, 0.645, 0.645)
globalAlpha=0.5
fillRect(681.564, 164.038, 0.663, 0.663)
globalAlpha=0.733
fillRect(962.848, 201.314, 0.921, 0.921)
globalAlpha=0.978
fillRect(842.609, 210.682, 1.251, 1.251)
globalAlpha=0.52
fillRect(941.863, 226.148, 1.487, 1.487)
globalAlpha=0.938
fillRect(67.109, 252.006, 1.817, 1.817)
globalAlpha=0.709
fillRect(339.966, 349.423, 1.983, 1.983)
globalAlpha=0.993
fillRect(658.688, 56.831, 1.58, 1.58)
globalAlpha=0.378
fillRect(837.367, 171.157, 1.608, 1.608)
globalAlpha=0.442
fillRect(716.324, 125.768, 1.522, 1.522)
globalAlpha=0.907
fillRect(400.323, 169.854, 1.366, 1.366)
globalAlpha=0.997
fillRect(1047.066, 303.681, 1.048, 1.048)
globalAlpha=0.636
fillRect(1157.718, 56.214, 1.427, 1.427)
globalAlpha=0.95
fillRect(260.797, 206.281, 1.938, 1.938)
globalAlpha=0.614
fillRect(983.884, 104.25, 0.719, 0.719)
globalAlpha=0.901
fillRect(138.843, 346.931, 1.665, 1.665)
globalAlpha=0.997
fillRect(893.984, 283.391, 1.308, 1.308)
globalAlpha=0.976
fillRect(915.913, 155.345, 1.394, 1.394)
globalAlpha=0.517
fillRect(106.325, 157.6, 1.047, 1.047)
globalAlpha=0.995
fillRect(275.581, 316.418, 0.651, 0.651)
globalAlpha=0.767
fillRect(1001.744, 214.625, 1.593, 1.593)
globalAlpha=0.559
fillRect(402.764, 371.932, 1.296, 1.296)
globalAlpha=0.993
fillRect(653.935, 86.797, 1.937, 1.937)
globalAlpha=0.936
fillRect(770.51, 190.995, 1.932, 1.932)
globalAlpha=0.707
fillRect(317.695, 182.361, 0.772, 0.772)
globalAlpha=0.91
fillRect(852.984, 101.063, 1.406, 1.406)
globalAlpha=0.953
fillRect(188.219, 297.254, 1.253, 1.253)
globalAlpha=0.413
fillRect(991.48, 199.318, 1.636, 1.636)
globalAlpha=0.959
fillRect(1181.103, 96.537, 0.825, 0.825)
globalAlpha=0.557
fillRect(539.311, 148.73, 1.875, 1.875)
globalAlpha=0.975
fillRect(426.601, 310.453, 1.936, 1.936)
globalAlpha=0.878
fillRect(1031.562, 244.481, 1.668, 1.668)
globalAlpha=0.503
fillRect(147.516, 119.836, 1.435, 1.435)
globalAlpha=0.751
fillRect(25.607, 203.564, 1.085, 1.085)
globalAlpha=0.786
fillRect(921.192, 86.181, 0.65, 0.65)
globalAlpha=0.895
fillRect(1148.189, 122.108, 0.622, 0.622)
globalAlpha=0.929
fillRect(522.004, 215.128, 0.611, 0.611)
globalAlpha=0.917
fillRect(839.528, 268.811, 1.263, 1.263)
globalAlpha=0.996
fillRect(40.889, 350.809, 1.367, 1.367)
globalAlpha=0.991
fillRect(729.449, 169.548, 1.082, 1.082)
globalAlpha=0.562
fillRect(1110.512, 251.539, 1.656, 1.656)
globalAlpha=0.484
fillRect(517.992, 374.668, 1.047, 1.047)
globalAlpha=0.909
fillRect(387.505, 321.922, 0.784, 0.784)
restore()
save()
translate(0, 0)
fillStyle=#241543
beginPath()
moveTo(-200, 560)
lineTo(-100, 560)
lineTo(-14.836, 418.73)
lineTo(70.329, 560)
lineTo(36.263, 560)
lineTo(187.873, 391.071)
lineTo(339.483, 560)
lineTo(278.839, 560)
lineTo(418.079, 390.476)
lineTo(557.32, 560)
lineTo(501.623, 560)
lineTo(593.072, 450.832)
lineTo(684.52, 560)
lineTo(647.941, 560)
lineTo(755.776, 430.073)
lineTo(863.611, 560)
lineTo(820.477, 560)
lineTo(904.503, 457.786)
lineTo(988.528, 560)
lineTo(954.918, 560)
lineTo(1105.091, 431.899)
lineTo(1255.263, 560)
lineTo(1195.194, 560)
lineTo(1319.076, 373.884)
lineTo(1442.957, 560)
lineTo(1393.405, 560)
lineTo(1511.999, 452.707)
lineTo(1630.594, 560)
lineTo(3000, 560)
closePath()
fill()
restore()
save()
translate(0, 0)
fillStyle=#2f1c55
beginPath()
moveTo(-200, 560)
lineTo(-100, 560)
lineTo(-10.004, 353.87)
lineTo(79.991, 560)
lineTo(43.993, 560)
lineTo(163.422, 305.448)
lineTo(282.851, 560)
lineTo(235.079, 560)
lineTo(360.954, 307.983)
lineTo(486.829, 560)
lineTo(436.479, 560)
lineTo(562.742, 314.442)
lineTo(689.004, 560)
lineTo(638.499, 560)
lineTo(748.332, 411.839)
lineTo(858.164, 560)
lineTo(814.231, 560)
lineTo(915.725, 331.122)
lineTo(1017.218, 560)
lineTo(976.621, 560)
lineTo(1084.506, 318.682)
lineTo(1192.392, 560)
lineTo(1149.237, 560)
lineTo(1242.011, 322.483)
lineTo(1334.784, 560)
lineTo(1297.675, 560)
lineTo(1414.84, 301.852)
lineTo(1532.005, 560)
lineTo(1485.139, 560)
lineTo(1566.512, 324.105)
lineTo(1647.886, 560)
lineTo(1615.337, 560)
lineTo(1702.135, 405.03)
lineTo(1788.934, 560)
lineTo(1754.214, 560)
lineTo(1838.061, 349.011)
lineTo(1921.908, 560)
lineTo(3000, 560)
closePath()
fill()
restore()
save()
translate(0, 0)
fillStyle=#2d1b4e
fillRect(0, 560, 820, 40)
fillStyle=#7b4fa6
fillRect(0, 560, 820, 4)
fillStyle=#2d1b4e
fillRect(940, 560, 660, 40)
fillStyle=#7b4fa6
fillRect(940, 560, 660, 4)
fillStyle=#2d1b4e
fillRect(1800, 560, 600, 40)
fillStyle=#7b4fa6
fillRect(1800, 560, 600, 4)
fillStyle=#4a2d7a
fillRect(320, 450, 140, 12)
fillRect(540, 370, 140, 12)
fillRect(840, 410, 120, 12)
fillRect(1200, 430, 140, 12)
fillRect(1640, 400, 130, 12)
fillRect(2000, 420, 140, 12)
fillStyle=#c98f3d
fillRect(450, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(451.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(700, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(701.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1300, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(1301.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1950, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(1951.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1250, 394, 36, 36)
strokeStyle=#8a5f22
strokeRect(1251.5, 395.5, 33, 33)
fillStyle=#cbb8ff
fillRect(2340, 470, 4, 90)
fillStyle=#ffd75e
beginPath()
arc(2342, 466, 5, 0, 6.283)
fill()
fillStyle=#ff6f91
beginPath()
moveTo(2344, 474)
lineTo(2380, 486)
lineTo(2344, 498)
closePath()
fill()
save()
translate(554, 560)
scale(1, 1)
globalAlpha=0.35
fillStyle=#fff5fa
fillRect(-14, -24, 28, 18)
fillRect(6, -34, 12, 12)
fillStyle=#ffd75e
beginPath()
moveTo(13, -34)
lineTo(17, -46)
lineTo(19, -34)
closePath()
fill()
fillStyle=#e78fd0
fillRect(2, -34, 5, 14)
fillStyle=#f3d9e6
fillRect(-12, -6, 5, 6)
fillRect(7, -6, 5, 6)
save()
fillStyle=#f5d76e
fillRect(-7, -44, 4, 13)
fillStyle=#8fd3f4
beginPath()
moveTo(-3.5, -31)
lineTo(3.5, -31)
lineTo(6.5, -21)
lineTo(-6.5, -21)
closePath()
fill()
fillRect(-3, -36, 7, 5)
fillStyle=#ffe0c8
fillRect(2, -29, 9, 3)
fillRect(-4, -44, 9, 8)
fillStyle=#3a2b4d
fillRect(1.5, -39.5, 2, 2.5)
fillStyle=#f5d76e
fillRect(-5, -45, 11, 4)
fillStyle=#ffd75e
fillRect(-4.5, -47.5, 10, 3)
beginPath()
moveTo(-4.5, -47.5)
lineTo(-3, -51)
lineTo(-1.5, -47.5)
moveTo(-1, -47.5)
lineTo(0.5, -52)
lineTo(2, -47.5)
moveTo(2.5, -47.5)
lineTo(4, -51)
lineTo(5.5, -47.5)
closePath()
fill()
fillStyle=#ff5e78
fillRect(-0.5, -46.5, 1.5, 1.5)
restore()
restore()
save()
translate(560, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(1050, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(1450, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(2038.5, 546)
scale(1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(2250, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
globalAlpha=0.431
fillStyle=#ff6f91
fillRect(541.25, 535.994, 3.8, 3.8)
globalAlpha=0.526
fillStyle=#ff6f91
fillRect(540.974, 551.937, 2.926, 2.926)
globalAlpha=0.419
fillStyle=#e33
fillRect(535.631, 539.082, 5.457, 5.457)
globalAlpha=0.498
fillStyle=#e33
fillRect(540.679, 556.604, 4.053, 4.053)
globalAlpha=0.485
fillStyle=#ff6f91
fillRect(539.371, 547.834, 2.607, 2.607)
globalAlpha=0.569
fillStyle=#e33
fillRect(561.94, 533.151, 4.189, 4.189)
globalAlpha=0.568
fillStyle=#e33
fillRect(563.718, 562.79, 3.037, 3.037)
globalAlpha=0.601
fillStyle=#e33
fillRect(541.032, 555.319, 3.678, 3.678)
globalAlpha=0.623
fillStyle=#e33
fillRect(549.824, 532.318, 4.2, 4.2)
globalAlpha=0.578
fillStyle=#ff6f91
fillRect(546.531, 565.741, 4.493, 4.493)
globalAlpha=1
restore()
restore()
save()
font=18px monospace
textBaseline=top
fillStyle=#33234f
fillText(♥, 12, 10)
fillStyle=#33234f
fillText(♥, 34, 10)
fillStyle=#33234f
fillText(♥, 56, 10)
fillStyle=#6fe3e1
textAlign=right
fillText(SCORE 0, 788, 10)
restore()
save()
fillStyle=rgba(13, 8, 21, 0.7)
fillRect(0, 0, 800, 600)
fillStyle=#fff5fa
textAlign=center
font=28px monospace
fillText(GAME OVER, 400, 276)
font=16px monospace
fillStyle=#cbb8ff
fillText(press R to try again, 400, 312)
restore()
save()
font=12px monospace
fillStyle=#5d4a80
textBaseline=bottom
fillText(sound on (M), 12, 592)
restore()"
`;

exports[`initial frame 1`] = `
"fillStyle=#0d0815
fillRect(0, 0, 800, 600)
save()
translate(0, 0)
save()
translate(0, 0)
fillStyle=#cbb8ff
globalAlpha=0.905
fillRect(728.962, 72.75, 1.213, 1.213)
globalAlpha=0.908
fillRect(151.24, 157.784, 0.811, 0.811)
globalAlpha=0.727
fillRect(273.915, 172.928, 1.366, 1.366)
globalAlpha=0.824
fillRect(1146.497, 221.814, 0.73, 0.73)
globalAlpha=0.891
fillRect(498.546, 196.28, 1.893, 1.893)
globalAlpha=0.973
fillRect(563.833, 61.937, 0.69, 0.69)
globalAlpha=0.585
fillRect(355.791, 328.817, 1.017, 1.017)
globalAlpha=0.97
fillRect(1099.5, 246.005, 0.824, 0.824)
globalAlpha=0.798
fillRect(238.753, 261.197, 1.504, 1.504)
globalAlpha=0.94
fillRect(379.048, 151.803, 1.431, 1.431)
globalAlpha=0.602
fillRect(867.714, 21.967, 1.387, 1.387)
globalAlpha=0.886
fillRect(1146.436, 109.475, 1.844, 1.844)
globalAlpha=0.879
fillRect(293.637, 263.707, 1.418, 1.418)
globalAlpha=0.787
fillRect(796.657, 11.137, 0.945, 0.945)
globalAlpha=0.993
fillRect(851.739, 294.133, 1.699, 1.699)
globalAlpha=0.936
fillRect(907.923, 75.899, 0.945, 0.945)
globalAlpha=0.691
fillRect(1160.027, 4.357, 1.746, 1.746)
globalAlpha=0.851
fillRect(419.298, 50.178, 1.122, 1.122)
globalAlpha=0.964
fillRect(1.408, 47.473, 1.171, 1.171)
globalAlpha=0.485
fillRect(992.396, 69.556, 0.777, 0.777)
globalAlpha=0.606
fillRect(1039.188, 259.132, 1.468, 1.468)
globalAlpha=0.621
fillRect(567.086, 199.79, 0.872, 0.872)
globalAlpha=0.699
fillRect(963.728, 295.418, 0.932, 0.932)
globalAlpha=0.898
fillRect(1070.7, 170.255, 1.742, 1.742)
globalAlpha=0.409
fillRect(513.059, 341.224, 1.164, 1.164)
globalAlpha=0.992
fillRect(237.91, 335.056, 1.619, 1.619)
globalAlpha=0.858
fillRect(434.148, 287.736, 1.187, 1.187)
globalAlpha=0.989
fillRect(1169.223, 228.552, 1.154, 1.154)
globalAlpha=0.937
fillRect(948.147, 184.439, 1.198, 1.198)
globalAlpha=0.969
fillRect(679.501, 279.098, 1.408, 1.408)
globalAlpha=1
fillRect(508.65, 145.019, 1.188, 1.188)
globalAlpha=0.971
fillRect(1085.152, 71.674, 1.424, 1.424)
globalAlpha=0.923
fillRect(728.004, 125.356, 1.88, 1.88)
globalAlpha=0.528
fillRect(816.019, 300.117, 1.176, 1.176)
globalAlpha=0.922
fillRect(558.395, 56.119, 1.661, 1.661)
globalAlpha=0.893
fillRect(174.579, 205.053, 1.635, 1.635)
globalAlpha=0.964
fillRect(685.067, 24.284, 0.618, 0.618)
globalAlpha=0.98
fillRect(866.286, 47.936, 1.474, 1.474)
globalAlpha=0.904
fillRect(307.074, 116.424, 1.813, 1.813)
globalAlpha=0.611
fillRect(1025.226, 20.072, 1.788, 1.788)
globalAlpha=0.985
fillRect(1172.858, 237.328, 1.025, 1.025)
globalAlpha=0.999
fillRect(1105.305, 262.581, 0.747, 0.747)
globalAlpha=0.772
fillRect(1117.725, 229.364, 0.895, 0.895)
globalAlpha=0.537
fillRect(744.464, 94.152, 1.329, 1.329)
globalAlpha=0.998
fillRect(525.118, 9.415, 1.846, 1.846)
globalAlpha=0.973
fillRect(432.777, 301.183, 0.709, 0.709)
globalAlpha=0.493
fillRect(313.354, 191.636, 1.987, 1.987)
globalAlpha=0.802
fillRect(167.114, 379.312, 0.905, 0.905)
globalAlpha=0.873
fillRect(723.197, 144.345, 1.53, 1.53)
globalAlpha=0.593
fillRect(268.091, 356.101, 0.824, 0.824)
globalAlpha=0.45
fillRect(114.769, 240.023, 1.857, 1.857)
globalAlpha=0.609
fillRect(970.801, 216.374, 0.85, 0.85)
globalAlpha=0.732
fillRect(981.66, 158.258, 0.963, 0.963)
globalAlpha=0.69
fillRect(566.051, 105.874, 1.555, 1.555)
globalAlpha=0.923
fillRect(522.518, 23, 1.179, 1.179)
globalAlpha=0.593
fillRect(180.779, 221.665, 1.649, 1.649)
globalAlpha=0.548
fillRect(735.758, 356.795, 0.698, 0.698)
globalAlpha=0.98
fillRect(26.876, 205.282, 1.935, 1.935)
globalAlpha=0.976
fillRect(440.13, 160.078, 0.811, 0.811)
globalAlpha=0.495
fillRect(875.624, 133.002, 1.161, 1.161)
globalAlpha=0.846
fillRect(585.972, 292.556, 1.209, 1.209)
globalAlpha=0.906
fillRect(1157.48, 26.237, 1.726, 1.726)
globalAlpha=0.522
fillRect(1087.423, 198.759, 1.995, 1.995)
globalAlpha=0.689
fillRect(194.279, 365.968, 1.602, 1.602)
globalAlpha=0.939
fillRect(397.758, 342.719, 1.016, 1.016)
globalAlpha=0.503
fillRect(945.187, 242.963, 0.904, 0.904)
globalAlpha=0.352
fillRect(457.183, 248.032, 1.197, 1.197)
globalAlpha=0.553
fillRect(112.736, 38.565, 0.645, 0.645)
globalAlpha=0.731
fillRect(681.564, 164.038, 0.663, 0.663)
globalAlpha=0.497
fillRect(962.848, 201.314, 0.921, 0.921)
globalAlpha=0.635
fillRect(842.609, 210.682, 1.251, 1.251)
globalAlpha=0.936
fillRect(941.863, 226.148, 1.487, 1.487)
globalAlpha=0.524
fillRect(67.109, 252.006, 1.817, 1.817)
globalAlpha=0.526
fillRect(339.966, 349.423, 1.983, 1.983)
globalAlpha=0.843
fillRect(658.688, 56.831, 1.58, 1.58)
globalAlpha=0.823
fillRect(837.367, 171.157, 1.608, 1.608)
globalAlpha=0.777
fillRect(716.324, 125.768, 1.522, 1.522)
globalAlpha=0.968
fillRect(400.323, 169.854, 1.366, 1.366)
globalAlpha=0.817
fillRect(1047.066, 303.681, 1.048, 1.048)
globalAlpha=0.979
fillRect(1157.718, 56.214, 1.427, 1.427)
globalAlpha=0.932
fillRect(260.797, 206.281, 1.938, 1.938)
globalAlpha=0.627
fillRect(983.884, 104.25, 0.719, 0.719)
globalAlpha=0.45
fillRect(138.843, 346.931, 1.665, 1.665)
globalAlpha=0.82
fillRect(893.984, 283.391, 1.308, 1.308)
globalAlpha=0.628
fillRect(915.913, 155.345, 1.394, 1.394)
globalAlpha=0.935
fillRect(106.325, 157.6, 1.047, 1.047)
globalAlpha=0.708
fillRect(275.581, 316.418, 0.651, 0.651)
globalAlpha=0.455
fillRect(1001.744, 214.625, 1.593, 1.593)
globalAlpha=0.953
fillRect(402.764, 371.932, 1.296, 1.296)
globalAlpha=0.699
fillRect(653.935, 86.797, 1.937, 1.937)
globalAlpha=0.945
fillRect(770.51, 190.995, 1.932, 1.932)
globalAlpha=0.528
fillRect(317.695, 182.361, 0.772, 0.772)
globalAlpha=0.465
fillRect(852.984, 101.063, 1.406, 1.406)
globalAlpha=0.928
fillRect(188.219, 297.254, 1.253, 1.253)
globalAlpha=0.881
fillRect(991.48, 199.318, 1.636, 1.636)
globalAlpha=0.92
fillRect(1181.103, 96.537, 0.825, 0.825)
globalAlpha=0.681
fillRect(539.311, 148.73, 1.875, 1.875)
globalAlpha=0.624
fillRect(426.601, 310.453, 1.936, 1.936)
globalAlpha=0.409
fillRect(1031.562, 244.481, 1.668, 1.668)
globalAlpha=0.928
fillRect(147.516, 119.836, 1.435, 1.435)
globalAlpha=0.999
fillRect(25.607, 203.564, 1.085, 1.085)
globalAlpha=1
fillRect(921.192, 86.181, 0.65, 0.65)
globalAlpha=0.974
fillRect(1148.189, 122.108, 0.622, 0.622)
globalAlpha=0.506
fillRect(522.004, 215.128, 0.611, 0.611)
globalAlpha=0.48
fillRect(839.528, 268.811, 1.263, 1.263)
globalAlpha=0.719
fillRect(40.889, 350.809, 1.367, 1.367)
globalAlpha=0.851
fillRect(729.449, 169.548, 1.082, 1.082)
globalAlpha=0.954
fillRect(1110.512, 251.539, 1.656, 1.656)
globalAlpha=0.744
fillRect(517.992, 374.668, 1.047, 1.047)
globalAlpha=0.464
fillRect(387.505, 321.922, 0.784, 0.784)
restore()
save()
translate(0, 0)
fillStyle=#241543
beginPath()
moveTo(-200, 560)
lineTo(-100, 560)
lineTo(-14.836, 418.73)
lineTo(70.329, 560)
lineTo(36.263, 560)
lineTo(187.873, 391.071)
lineTo(339.483, 560)
lineTo(278.839, 560)
lineTo(418.079, 390.476)
lineTo(557.32, 560)
lineTo(501.623, 560)
lineTo(593.072, 450.832)
lineTo(684.52, 560)
lineTo(647.941, 560)
lineTo(755.776, 430.073)
lineTo(863.611, 560)
lineTo(820.477, 560)
lineTo(904.503, 457.786)
lineTo(988.528, 560)
lineTo(954.918, 560)
lineTo(1105.091, 431.899)
lineTo(1255.263, 560)
lineTo(1195.194, 560)
lineTo(1319.076, 373.884)
lineTo(1442.957, 560)
lineTo(1393.405, 560)
lineTo(1511.999, 452.707)
lineTo(1630.594, 560)
lineTo(3000, 560)
closePath()
fill()
restore()
save()
translate(0, 0)
fillStyle=#2f1c55
beginPath()
moveTo(-200, 560)
lineTo(-100, 560)
lineTo(-10.004, 353.87)
lineTo(79.991, 560)
lineTo(43.993, 560)
lineTo(163.422, 305.448)
lineTo(282.851, 560)
lineTo(235.079, 560)
lineTo(360.954, 307.983)
lineTo(486.829, 560)
lineTo(436.479, 560)
lineTo(562.742, 314.442)
lineTo(689.004, 560)
lineTo(638.499, 560)
lineTo(748.332, 411.839)
lineTo(858.164, 560)
lineTo(814.231, 560)
lineTo(915.725, 331.122)
lineTo(1017.218, 560)
lineTo(976.621, 560)
lineTo(1084.506, 318.682)
lineTo(1192.392, 560)
lineTo(1149.237, 560)
lineTo(1242.011, 322.483)
lineTo(1334.784, 560)
lineTo(1297.675, 560)
lineTo(1414.84, 301.852)
lineTo(1532.005, 560)
lineTo(1485.139, 560)
lineTo(1566.512, 324.105)
lineTo(1647.886, 560)
lineTo(1615.337, 560)
lineTo(1702.135, 405.03)
lineTo(1788.934, 560)
lineTo(1754.214, 560)
lineTo(1838.061, 349.011)
lineTo(1921.908, 560)
lineTo(3000, 560)
closePath()
fill()
restore()
save()
translate(0, 0)
fillStyle=#2d1b4e
fillRect(0, 560, 820, 40)
fillStyle=#7b4fa6
fillRect(0, 560, 820, 4)
fillStyle=#2d1b4e
fillRect(940, 560, 660, 40)
fillStyle=#7b4fa6
fillRect(940, 560, 660, 4)
fillStyle=#2d1b4e
fillRect(1800, 560, 600, 40)
fillStyle=#7b4fa6
fillRect(1800, 560, 600, 4)
fillStyle=#4a2d7a
fillRect(320, 450, 140, 12)
fillRect(540, 370, 140, 12)
fillRect(840, 410, 120, 12)
fillRect(1200, 430, 140, 12)
fillRect(1640, 400, 130, 12)
fillRect(2000, 420, 140, 12)
fillStyle=#c98f3d
fillRect(450, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(451.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(700, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(701.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1300, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(1301.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1950, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(1951.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1250, 394, 36, 36)
strokeStyle=#8a5f22
strokeRect(1251.5, 395.5, 33, 33)
fillStyle=#cbb8ff
fillRect(2340, 470, 4, 90)
fillStyle=#ffd75e
beginPath()
arc(2342, 466, 5, 0, 6.283)
fill()
fillStyle=#ff6f91
beginPath()
moveTo(2344, 474)
lineTo(2380, 486)
lineTo(2344, 498)
closePath()
fill()
save()
translate(74, 560)
scale(1, 1)
fillStyle=#fff5fa
fillRect(-14, -24, 28, 18)
fillRect(6, -34, 12, 12)
fillStyle=#ffd75e
beginPath()
moveTo(13, -34)
lineTo(17, -46)
lineTo(19, -34)
closePath()
fill()
fillStyle=#e78fd0
fillRect(2, -34, 5, 14)
fillStyle=#f3d9e6
fillRect(-12, -6, 5, 6)
fillRect(7, -6, 5, 6)
save()
fillStyle=#f5d76e
fillRect(-7, -44, 4, 13)
fillStyle=#8fd3f4
beginPath()
moveTo(-3.5, -31)
lineTo(3.5, -31)
lineTo(6.5, -21)
lineTo(-6.5, -21)
closePath()
fill()
fillRect(-3, -36, 7, 5)
fillStyle=#ffe0c8
fillRect(2, -29, 9, 3)
fillRect(-4, -44, 9, 8)
fillStyle=#3a2b4d
fillRect(1.5, -39.5, 2, 2.5)
fillStyle=#f5d76e
fillRect(-5, -45, 11, 4)
fillStyle=#ffd75e
fillRect(-4.5, -47.5, 10, 3)
beginPath()
moveTo(-4.5, -47.5)
lineTo(-3, -51)
lineTo(-1.5, -47.5)
moveTo(-1, -47.5)
lineTo(0.5, -52)
lineTo(2, -47.5)
moveTo(2.5, -47.5)
lineTo(4, -51)
lineTo(5.5, -47.5)
closePath()
fill()
fillStyle=#ff5e78
fillRect(-0.5, -46.5, 1.5, 1.5)
restore()
restore()
save()
translate(575, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(1065, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(1465, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(2015, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(2265, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
globalAlpha=1
restore()
restore()
save()
font=18px monospace
textBaseline=top
fillStyle=#ff6f91
fillText(♥, 12, 10)
fillStyle=#ff6f91
fillText(♥, 34, 10)
fillStyle=#ff6f91
fillText(♥, 56, 10)
fillStyle=#6fe3e1
textAlign=right
fillText(SCORE 0, 788, 10)
restore()
save()
font=12px monospace
fillStyle=#5d4a80
textBaseline=bottom
fillText(sound on (M), 12, 592)
restore()"
`;

exports[`jumping 1`] = `
"fillStyle=#0d0815
fillRect(0, 0, 800, 600)
save()
translate(0, 0)
save()
translate(0, 0)
fillStyle=#cbb8ff
globalAlpha=0.997
fillRect(728.962, 72.75, 1.213, 1.213)
globalAlpha=0.598
fillRect(151.24, 157.784, 0.811, 0.811)
globalAlpha=0.969
fillRect(273.915, 172.928, 1.366, 1.366)
globalAlpha=0.996
fillRect(1146.497, 221.814, 0.73, 0.73)
globalAlpha=0.999
fillRect(498.546, 196.28, 1.893, 1.893)
globalAlpha=0.96
fillRect(563.833, 61.937, 0.69, 0.69)
globalAlpha=0.524
fillRect(355.791, 328.817, 1.017, 1.017)
globalAlpha=0.964
fillRect(1099.5, 246.005, 0.824, 0.824)
globalAlpha=0.991
fillRect(238.753, 261.197, 1.504, 1.504)
globalAlpha=0.986
fillRect(379.048, 151.803, 1.431, 1.431)
globalAlpha=0.506
fillRect(867.714, 21.967, 1.387, 1.387)
globalAlpha=0.559
fillRect(1146.436, 109.475, 1.844, 1.844)
globalAlpha=0.548
fillRect(293.637, 263.707, 1.418, 1.418)
globalAlpha=0.412
fillRect(796.657, 11.137, 0.945, 0.945)
globalAlpha=0.923
fillRect(851.739, 294.133, 1.699, 1.699)
globalAlpha=0.65
fillRect(907.923, 75.899, 0.945, 0.945)
globalAlpha=0.955
fillRect(1160.027, 4.357, 1.746, 1.746)
globalAlpha=0.503
fillRect(419.298, 50.178, 1.122, 1.122)
globalAlpha=0.714
fillRect(1.408, 47.473, 1.171, 1.171)
globalAlpha=0.839
fillRect(992.396, 69.556, 0.777, 0.777)
globalAlpha=0.913
fillRect(1039.188, 259.132, 1.468, 1.468)
globalAlpha=0.487
fillRect(567.086, 199.79, 0.872, 0.872)
globalAlpha=0.398
fillRect(963.728, 295.418, 0.932, 0.932)
globalAlpha=0.58
fillRect(1070.7, 170.255, 1.742, 1.742)
globalAlpha=0.69
fillRect(513.059, 341.224, 1.164, 1.164)
globalAlpha=0.801
fillRect(237.91, 335.056, 1.619, 1.619)
globalAlpha=0.514
fillRect(434.148, 287.736, 1.187, 1.187)
globalAlpha=0.793
fillRect(1169.223, 228.552, 1.154, 1.154)
globalAlpha=0.987
fillRect(948.147, 184.439, 1.198, 1.198)
globalAlpha=0.727
fillRect(679.501, 279.098, 1.408, 1.408)
globalAlpha=0.884
fillRect(508.65, 145.019, 1.188, 1.188)
globalAlpha=0.733
fillRect(1085.152, 71.674, 1.424, 1.424)
globalAlpha=0.625
fillRect(728.004, 125.356, 1.88, 1.88)
globalAlpha=0.866
fillRect(816.019, 300.117, 1.176, 1.176)
globalAlpha=0.623
fillRect(558.395, 56.119, 1.661, 1.661)
globalAlpha=0.999
fillRect(174.579, 205.053, 1.635, 1.635)
globalAlpha=0.714
fillRect(685.067, 24.284, 0.618, 0.618)
globalAlpha=0.951
fillRect(866.286, 47.936, 1.474, 1.474)
globalAlpha=0.59
fillRect(307.074, 116.424, 1.813, 1.813)
globalAlpha=0.497
fillRect(1025.226, 20.072, 1.788, 1.788)
globalAlpha=0.942
fillRect(1172.858, 237.328, 1.025, 1.025)
globalAlpha=0.849
fillRect(1105.305, 262.581, 0.747, 0.747)
globalAlpha=0.392
fillRect(1117.725, 229.364, 0.895, 0.895)
globalAlpha=0.873
fillRect(744.464, 94.152, 1.329, 1.329)
globalAlpha=0.835
fillRect(525.118, 9.415, 1.846, 1.846)
globalAlpha=0.96
fillRect(432.777, 301.183, 0.709, 0.709)
globalAlpha=0.844
fillRect(313.354, 191.636, 1.987, 1.987)
globalAlpha=0.992
fillRect(167.114, 379.312, 0.905, 0.905)
globalAlpha=1
fillRect(723.197, 144.345, 1.53, 1.53)
globalAlpha=0.516
fillRect(268.091, 356.101, 0.824, 0.824)
globalAlpha=0.814
fillRect(114.769, 240.023, 1.857, 1.857)
globalAlpha=0.914
fillRect(970.801, 216.374, 0.85, 0.85)
globalAlpha=0.358
fillRect(981.66, 158.258, 0.963, 0.963)
globalAlpha=0.409
fillRect(566.051, 105.874, 1.555, 1.555)
globalAlpha=0.625
fillRect(522.518, 23, 1.179, 1.179)
globalAlpha=0.517
fillRect(180.779, 221.665, 1.649, 1.649)
globalAlpha=0.879
fillRect(735.758, 356.795, 0.698, 0.698)
globalAlpha=0.757
fillRect(26.876, 205.282, 1.935, 1.935)
globalAlpha=0.748
fillRect(440.13, 160.078, 0.811, 0.811)
globalAlpha=0.613
fillRect(875.624, 133.002, 1.161, 1.161)
globalAlpha=0.999
fillRect(585.972, 292.556, 1.209, 1.209)
globalAlpha=0.594
fillRect(1157.48, 26.237, 1.726, 1.726)
globalAlpha=0.587
fillRect(1087.423, 198.759, 1.995, 1.995)
globalAlpha=0.411
fillRect(194.279, 365.968, 1.602, 1.602)
globalAlpha=0.986
fillRect(397.758, 342.719, 1.016, 1.016)
globalAlpha=0.851
fillRect(945.187, 242.963, 0.904, 0.904)
globalAlpha=0.741
fillRect(457.183, 248.032, 1.197, 1.197)
globalAlpha=0.557
fillRect(112.736, 38.565, 0.645, 0.645)
globalAlpha=0.97
fillRect(681.564, 164.038, 0.663, 0.663)
globalAlpha=0.847
fillRect(962.848, 201.314, 0.921, 0.921)
globalAlpha=0.471
fillRect(842.609, 210.682, 1.251, 1.251)
globalAlpha=0.988
fillRect(941.863, 226.148, 1.487, 1.487)
globalAlpha=0.586
fillRect(67.109, 252.006, 1.817, 1.817)
globalAlpha=0.865
fillRect(339.966, 349.423, 1.983, 1.983)
globalAlpha=0.491
fillRect(658.688, 56.831, 1.58, 1.58)
globalAlpha=0.996
fillRect(837.367, 171.157, 1.608, 1.608)
globalAlpha=0.985
fillRect(716.324, 125.768, 1.522, 1.522)
globalAlpha=0.724
fillRect(400.323, 169.854, 1.366, 1.366)
globalAlpha=0.454
fillRect(1047.066, 303.681, 1.048, 1.048)
globalAlpha=0.952
fillRect(1157.718, 56.214, 1.427, 1.427)
globalAlpha=0.643
fillRect(260.797, 206.281, 1.938, 1.938)
globalAlpha=0.924
fillRect(983.884, 104.25, 0.719, 0.719)
globalAlpha=0.655
fillRect(138.843, 346.931, 1.665, 1.665)
globalAlpha=0.457
fillRect(893.984, 283.391, 1.308, 1.308)
globalAlpha=0.479
fillRect(915.913, 155.345, 1.394, 1.394)
globalAlpha=0.988
fillRect(106.325, 157.6, 1.047, 1.047)
globalAlpha=0.388
fillRect(275.581, 316.418, 0.651, 0.651)
globalAlpha=0.818
fillRect(1001.744, 214.625, 1.593, 1.593)
globalAlpha=0.979
fillRect(402.764, 371.932, 1.296, 1.296)
globalAlpha=0.399
fillRect(653.935, 86.797, 1.937, 1.937)
globalAlpha=0.671
fillRect(770.51, 190.995, 1.932, 1.932)
globalAlpha=0.867
fillRect(317.695, 182.361, 0.772, 0.772)
globalAlpha=0.64
fillRect(852.984, 101.063, 1.406, 1.406)
globalAlpha=0.635
fillRect(188.219, 297.254, 1.253, 1.253)
globalAlpha=1
fillRect(991.48, 199.318, 1.636, 1.636)
globalAlpha=0.621
fillRect(1181.103, 96.537, 0.825, 0.825)
globalAlpha=0.95
fillRect(539.311, 148.73, 1.875, 1.875)
globalAlpha=0.483
fillRect(426.601, 310.453, 1.936, 1.936)
globalAlpha=0.69
fillRect(1031.562, 244.481, 1.668, 1.668)
globalAlpha=0.991
fillRect(147.516, 119.836, 1.435, 1.435)
globalAlpha=0.889
fillRect(25.607, 203.564, 1.085, 1.085)
globalAlpha=0.862
fillRect(921.192, 86.181, 0.65, 0.65)
globalAlpha=0.742
fillRect(1148.189, 122.108, 0.622, 0.622)
globalAlpha=0.603
fillRect(522.004, 215.128, 0.611, 0.611)
globalAlpha=0.627
fillRect(839.528, 268.811, 1.263, 1.263)
globalAlpha=0.375
fillRect(40.889, 350.809, 1.367, 1.367)
globalAlpha=0.503
fillRect(729.449, 169.548, 1.082, 1.082)
globalAlpha=0.978
fillRect(1110.512, 251.539, 1.656, 1.656)
globalAlpha=0.975
fillRect(517.992, 374.668, 1.047, 1.047)
globalAlpha=0.642
fillRect(387.505, 321.922, 0.784, 0.784)
restore()
save()
translate(0, 0)
fillStyle=#241543
beginPath()
moveTo(-200, 560)
lineTo(-100, 560)
lineTo(-14.836, 418.73)
lineTo(70.329, 560)
lineTo(36.263, 560)
lineTo(187.873, 391.071)
lineTo(339.483, 560)
lineTo(278.839, 560)
lineTo(418.079, 390.476)
lineTo(557.32, 560)
lineTo(501.623, 560)
lineTo(593.072, 450.832)
lineTo(684.52, 560)
lineTo(647.941, 560)
lineTo(755.776, 430.073)
lineTo(863.611, 560)
lineTo(820.477, 560)
lineTo(904.503, 457.786)
lineTo(988.528, 560)
lineTo(954.918, 560)
lineTo(1105.091, 431.899)
lineTo(1255.263, 560)
lineTo(1195.194, 560)
lineTo(1319.076, 373.884)
lineTo(1442.957, 560)
lineTo(1393.405, 560)
lineTo(1511.999, 452.707)
lineTo(1630.594, 560)
lineTo(3000, 560)
closePath()
fill()
restore()
save()
translate(0, 0)
fillStyle=#2f1c55
beginPath()
moveTo(-200, 560)
lineTo(-100, 560)
lineTo(-10.004, 353.87)
lineTo(79.991, 560)
lineTo(43.993, 560)
lineTo(163.422, 305.448)
lineTo(282.851, 560)
lineTo(235.079, 560)
lineTo(360.954, 307.983)
lineTo(486.829, 560)
lineTo(436.479, 560)
lineTo(562.742, 314.442)
lineTo(689.004, 560)
lineTo(638.499, 560)
lineTo(748.332, 411.839)
lineTo(858.164, 560)
lineTo(814.231, 560)
lineTo(915.725, 331.122)
lineTo(1017.218, 560)
lineTo(976.621, 560)
lineTo(1084.506, 318.682)
lineTo(1192.392, 560)
lineTo(1149.237, 560)
lineTo(1242.011, 322.483)
lineTo(1334.784, 560)
lineTo(1297.675, 560)
lineTo(1414.84, 301.852)
lineTo(1532.005, 560)
lineTo(1485.139, 560)
lineTo(1566.512, 324.105)
lineTo(1647.886, 560)
lineTo(1615.337, 560)
lineTo(1702.135, 405.03)
lineTo(1788.934, 560)
lineTo(1754.214, 560)
lineTo(1838.061, 349.011)
lineTo(1921.908, 560)
lineTo(3000, 560)
closePath()
fill()
restore()
save()
translate(0, 0)
fillStyle=#2d1b4e
fillRect(0, 560, 820, 40)
fillStyle=#7b4fa6
fillRect(0, 560, 820, 4)
fillStyle=#2d1b4e
fillRect(940, 560, 660, 40)
fillStyle=#7b4fa6
fillRect(940, 560, 660, 4)
fillStyle=#2d1b4e
fillRect(1800, 560, 600, 40)
fillStyle=#7b4fa6
fillRect(1800, 560, 600, 4)
fillStyle=#4a2d7a
fillRect(320, 450, 140, 12)
fillRect(540, 370, 140, 12)
fillRect(840, 410, 120, 12)
fillRect(1200, 430, 140, 12)
fillRect(1640, 400, 130, 12)
fillRect(2000, 420, 140, 12)
fillStyle=#c98f3d
fillRect(450, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(451.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(700, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(701.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1300, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(1301.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1950, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(1951.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1250, 394, 36, 36)
strokeStyle=#8a5f22
strokeRect(1251.5, 395.5, 33, 33)
fillStyle=#cbb8ff
fillRect(2340, 470, 4, 90)
fillStyle=#ffd75e
beginPath()
arc(2342, 466, 5, 0, 6.283)
fill()
fillStyle=#ff6f91
beginPath()
moveTo(2344, 474)
lineTo(2380, 486)
lineTo(2344, 498)
closePath()
fill()
save()
translate(74, 491)
scale(0.982, 1.023)
fillStyle=#fff5fa
fillRect(-14, -24, 28, 18)
fillRect(6, -34, 12, 12)
fillStyle=#ffd75e
beginPath()
moveTo(13, -34)
lineTo(17, -46)
lineTo(19, -34)
closePath()
fill()
fillStyle=#e78fd0
fillRect(2, -34, 5, 14)
fillStyle=#f3d9e6
fillRect(-12, -6, 5, 6)
fillRect(7, -6, 5, 6)
save()
fillStyle=#f5d76e
fillRect(-7, -44, 4, 13)
fillStyle=#8fd3f4
beginPath()
moveTo(-3.5, -31)
lineTo(3.5, -31)
lineTo(6.5, -21)
lineTo(-6.5, -21)
closePath()
fill()
fillRect(-3, -36, 7, 5)
fillStyle=#ffe0c8
fillRect(2, -29, 9, 3)
fillRect(-4, -44, 9, 8)
fillStyle=#3a2b4d
fillRect(1.5, -39.5, 2, 2.5)
fillStyle=#f5d76e
fillRect(-5, -45, 11, 4)
fillStyle=#ffd75e
fillRect(-4.5, -47.5, 10, 3)
beginPath()
moveTo(-4.5, -47.5)
lineTo(-3, -51)
lineTo(-1.5, -47.5)
moveTo(-1, -47.5)
lineTo(0.5, -52)
lineTo(2, -47.5)
moveTo(2.5, -47.5)
lineTo(4, -51)
lineTo(5.5, -47.5)
closePath()
fill()
fillStyle=#ff5e78
fillRect(-0.5, -46.5, 1.5, 1.5)
restore()
restore()
save()
translate(560, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(1050, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(1450, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(2038.5, 546)
scale(1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(2250, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
globalAlpha=1
restore()
restore()
save()
font=18px monospace
textBaseline=top
fillStyle=#ff6f91
fillText(♥, 12, 10)
fillStyle=#ff6f91
fillText(♥, 34, 10)
fillStyle=#ff6f91
fillText(♥, 56, 10)
fillStyle=#6fe3e1
textAlign=right
fillText(SCORE 0, 788, 10)
restore()
save()
font=12px monospace
fillStyle=#5d4a80
textBaseline=bottom
fillText(sound on (M), 12, 592)
restore()"
`;

exports[`landed-hard 1`] = `
"fillStyle=#0d0815
fillRect(0, 0, 800, 600)
save()
translate(0, 0)
save()
translate(0, 0)
fillStyle=#cbb8ff
globalAlpha=0.751
fillRect(728.962, 72.75, 1.213, 1.213)
globalAlpha=0.99
fillRect(151.24, 157.784, 0.811, 0.811)
globalAlpha=0.517
fillRect(273.915, 172.928, 1.366, 1.366)
globalAlpha=0.638
fillRect(1146.497, 221.814, 0.73, 0.73)
globalAlpha=0.73
fillRect(498.546, 196.28, 1.893, 1.893)
globalAlpha=0.868
fillRect(563.833, 61.937, 0.69, 0.69)
globalAlpha=0.783
fillRect(355.791, 328.817, 1.017, 1.017)
globalAlpha=0.861
fillRect(1099.5, 246.005, 0.824, 0.824)
globalAlpha=0.604
fillRect(238.753, 261.197, 1.504, 1.504)
globalAlpha=0.806
fillRect(379.048, 151.803, 1.431, 1.431)
globalAlpha=0.796
fillRect(867.714, 21.967, 1.387, 1.387)
globalAlpha=0.981
fillRect(1146.436, 109.475, 1.844, 1.844)
globalAlpha=0.978
fillRect(293.637, 263.707, 1.418, 1.418)
globalAlpha=0.928
fillRect(796.657, 11.137, 0.945, 0.945)
globalAlpha=0.918
fillRect(851.739, 294.133, 1.699, 1.699)
globalAlpha=0.997
fillRect(907.923, 75.899, 0.945, 0.945)
globalAlpha=0.476
fillRect(1160.027, 4.357, 1.746, 1.746)
globalAlpha=0.964
fillRect(419.298, 50.178, 1.122, 1.122)
globalAlpha=1
fillRect(1.408, 47.473, 1.171, 1.171)
globalAlpha=0.446
fillRect(992.396, 69.556, 0.777, 0.777)
globalAlpha=0.381
fillRect(1039.188, 259.132, 1.468, 1.468)
globalAlpha=0.811
fillRect(567.086, 199.79, 0.872, 0.872)
globalAlpha=0.869
fillRect(963.728, 295.418, 0.932, 0.932)
globalAlpha=0.986
fillRect(1070.7, 170.255, 1.742, 1.742)
globalAlpha=0.632
fillRect(513.059, 341.224, 1.164, 1.164)
globalAlpha=0.987
fillRect(237.91, 335.056, 1.619, 1.619)
globalAlpha=0.968
fillRect(434.148, 287.736, 1.187, 1.187)
globalAlpha=0.99
fillRect(1169.223, 228.552, 1.154, 1.154)
globalAlpha=0.803
fillRect(948.147, 184.439, 1.198, 1.198)
globalAlpha=0.999
fillRect(679.501, 279.098, 1.408, 1.408)
globalAlpha=0.951
fillRect(508.65, 145.019, 1.188, 1.188)
globalAlpha=0.999
fillRect(1085.152, 71.674, 1.424, 1.424)
globalAlpha=0.994
fillRect(728.004, 125.356, 1.88, 1.88)
globalAlpha=0.403
fillRect(816.019, 300.117, 1.176, 1.176)
globalAlpha=0.994
fillRect(558.395, 56.119, 1.661, 1.661)
globalAlpha=0.734
fillRect(174.579, 205.053, 1.635, 1.635)
globalAlpha=1
fillRect(685.067, 24.284, 0.618, 0.618)
globalAlpha=0.883
fillRect(866.286, 47.936, 1.474, 1.474)
globalAlpha=0.988
fillRect(307.074, 116.424, 1.813, 1.813)
globalAlpha=0.803
fillRect(1025.226, 20.072, 1.788, 1.788)
globalAlpha=0.895
fillRect(1172.858, 237.328, 1.025, 1.025)
globalAlpha=0.97
fillRect(1105.305, 262.581, 0.747, 0.747)
globalAlpha=0.918
fillRect(1117.725, 229.364, 0.895, 0.895)
globalAlpha=0.393
fillRect(744.464, 94.152, 1.329, 1.329)
globalAlpha=0.976
fillRect(525.118, 9.415, 1.846, 1.846)
globalAlpha=0.869
fillRect(432.777, 301.183, 0.709, 0.709)
globalAlpha=0.438
fillRect(313.354, 191.636, 1.987, 1.987)
globalAlpha=0.609
fillRect(167.114, 379.312, 0.905, 0.905)
globalAlpha=0.704
fillRect(723.197, 144.345, 1.53, 1.53)
globalAlpha=0.789
fillRect(268.091, 356.101, 0.824, 0.824)
globalAlpha=0.482
fillRect(114.769, 240.023, 1.857, 1.857)
globalAlpha=0.383
fillRect(970.801, 216.374, 0.85, 0.85)
globalAlpha=0.892
fillRect(981.66, 158.258, 0.963, 0.963)
globalAlpha=0.863
fillRect(566.051, 105.874, 1.555, 1.555)
globalAlpha=0.994
fillRect(522.518, 23, 1.179, 1.179)
globalAlpha=0.789
fillRect(180.779, 221.665, 1.649, 1.649)
globalAlpha=0.382
fillRect(735.758, 356.795, 0.698, 0.698)
globalAlpha=0.996
fillRect(26.876, 205.282, 1.935, 1.935)
globalAlpha=0.998
fillRect(440.13, 160.078, 0.811, 0.811)
globalAlpha=0.708
fillRect(875.624, 133.002, 1.161, 1.161)
globalAlpha=0.667
fillRect(585.972, 292.556, 1.209, 1.209)
globalAlpha=0.989
fillRect(1157.48, 26.237, 1.726, 1.726)
globalAlpha=0.731
fillRect(1087.423, 198.759, 1.995, 1.995)
globalAlpha=0.862
fillRect(194.279, 365.968, 1.602, 1.602)
globalAlpha=0.805
fillRect(397.758, 342.719, 1.016, 1.016)
globalAlpha=0.428
fillRect(945.187, 242.963, 0.904, 0.904)
globalAlpha=0.576
fillRect(457.183, 248.032, 1.197, 1.197)
globalAlpha=0.756
fillRect(112.736, 38.565, 0.645, 0.645)
globalAlpha=0.522
fillRect(681.564, 164.038, 0.663, 0.663)
globalAlpha=0.435
fillRect(962.848, 201.314, 0.921, 0.921)
globalAlpha=0.822
fillRect(842.609, 210.682, 1.251, 1.251)
globalAlpha=0.8
fillRect(941.863, 226.148, 1.487, 1.487)
globalAlpha=0.732
fillRect(67.109, 252.006, 1.817, 1.817)
globalAlpha=0.405
fillRect(339.966, 349.423, 1.983, 1.983)
globalAlpha=0.96
fillRect(658.688, 56.831, 1.58, 1.58)
globalAlpha=0.637
fillRect(837.367, 171.157, 1.608, 1.608)
globalAlpha=0.578
fillRect(716.324, 125.768, 1.522, 1.522)
globalAlpha=0.999
fillRect(400.323, 169.854, 1.366, 1.366)
globalAlpha=0.946
fillRect(1047.066, 303.681, 1.048, 1.048)
globalAlpha=0.881
fillRect(1157.718, 56.214, 1.427, 1.427)
globalAlpha=0.997
fillRect(260.797, 206.281, 1.938, 1.938)
globalAlpha=0.403
fillRect(983.884, 104.25, 0.719, 0.719)
globalAlpha=0.669
fillRect(138.843, 346.931, 1.665, 1.665)
globalAlpha=0.947
fillRect(893.984, 283.391, 1.308, 1.308)
globalAlpha=0.816
fillRect(915.913, 155.345, 1.394, 1.394)
globalAlpha=0.798
fillRect(106.325, 157.6, 1.047, 1.047)
globalAlpha=0.876
fillRect(275.581, 316.418, 0.651, 0.651)
globalAlpha=0.477
fillRect(1001.744, 214.625, 1.593, 1.593)
globalAlpha=0.829
fillRect(402.764, 371.932, 1.296, 1.296)
globalAlpha=0.869
fillRect(653.935, 86.797, 1.937, 1.937)
globalAlpha=0.999
fillRect(770.51, 190.995, 1.932, 1.932)
globalAlpha=0.402
fillRect(317.695, 182.361, 0.772, 0.772)
globalAlpha=0.683
fillRect(852.984, 101.063, 1.406, 1.406)
globalAlpha=0.996
fillRect(188.219, 297.254, 1.253, 1.253)
globalAlpha=0.715
fillRect(991.48, 199.318, 1.636, 1.636)
globalAlpha=0.994
fillRect(1181.103, 96.537, 0.825, 0.825)
globalAlpha=0.464
fillRect(539.311, 148.73, 1.875, 1.875)
globalAlpha=0.813
fillRect(426.601, 310.453, 1.936, 1.936)
globalAlpha=0.632
fillRect(1031.562, 244.481, 1.668, 1.668)
globalAlpha=0.787
fillRect(147.516, 119.836, 1.435, 1.435)
globalAlpha=0.947
fillRect(25.607, 203.564, 1.085, 1.085)
globalAlpha=0.964
fillRect(921.192, 86.181, 0.65, 0.65)
globalAlpha=0.998
fillRect(1148.189, 122.108, 0.622, 0.622)
globalAlpha=0.717
fillRect(522.004, 215.128, 0.611, 0.611)
globalAlpha=0.695
fillRect(839.528, 268.811, 1.263, 1.263)
globalAlpha=0.883
fillRect(40.889, 350.809, 1.367, 1.367)
globalAlpha=0.964
fillRect(729.449, 169.548, 1.082, 1.082)
globalAlpha=0.83
fillRect(1110.512, 251.539, 1.656, 1.656)
globalAlpha=0.537
fillRect(517.992, 374.668, 1.047, 1.047)
globalAlpha=0.681
fillRect(387.505, 321.922, 0.784, 0.784)
restore()
save()
translate(0, 0)
fillStyle=#241543
beginPath()
moveTo(-200, 560)
lineTo(-100, 560)
lineTo(-14.836, 418.73)
lineTo(70.329, 560)
lineTo(36.263, 560)
lineTo(187.873, 391.071)
lineTo(339.483, 560)
lineTo(278.839, 560)
lineTo(418.079, 390.476)
lineTo(557.32, 560)
lineTo(501.623, 560)
lineTo(593.072, 450.832)
lineTo(684.52, 560)
lineTo(647.941, 560)
lineTo(755.776, 430.073)
lineTo(863.611, 560)
lineTo(820.477, 560)
lineTo(904.503, 457.786)
lineTo(988.528, 560)
lineTo(954.918, 560)
lineTo(1105.091, 431.899)
lineTo(1255.263, 560)
lineTo(1195.194, 560)
lineTo(1319.076, 373.884)
lineTo(1442.957, 560)
lineTo(1393.405, 560)
lineTo(1511.999, 452.707)
lineTo(1630.594, 560)
lineTo(3000, 560)
closePath()
fill()
restore()
save()
translate(0, 0)
fillStyle=#2f1c55
beginPath()
moveTo(-200, 560)
lineTo(-100, 560)
lineTo(-10.004, 353.87)
lineTo(79.991, 560)
lineTo(43.993, 560)
lineTo(163.422, 305.448)
lineTo(282.851, 560)
lineTo(235.079, 560)
lineTo(360.954, 307.983)
lineTo(486.829, 560)
lineTo(436.479, 560)
lineTo(562.742, 314.442)
lineTo(689.004, 560)
lineTo(638.499, 560)
lineTo(748.332, 411.839)
lineTo(858.164, 560)
lineTo(814.231, 560)
lineTo(915.725, 331.122)
lineTo(1017.218, 560)
lineTo(976.621, 560)
lineTo(1084.506, 318.682)
lineTo(1192.392, 560)
lineTo(1149.237, 560)
lineTo(1242.011, 322.483)
lineTo(1334.784, 560)
lineTo(1297.675, 560)
lineTo(1414.84, 301.852)
lineTo(1532.005, 560)
lineTo(1485.139, 560)
lineTo(1566.512, 324.105)
lineTo(1647.886, 560)
lineTo(1615.337, 560)
lineTo(1702.135, 405.03)
lineTo(1788.934, 560)
lineTo(1754.214, 560)
lineTo(1838.061, 349.011)
lineTo(1921.908, 560)
lineTo(3000, 560)
closePath()
fill()
restore()
save()
translate(0, 0)
fillStyle=#2d1b4e
fillRect(0, 560, 820, 40)
fillStyle=#7b4fa6
fillRect(0, 560, 820, 4)
fillStyle=#2d1b4e
fillRect(940, 560, 660, 40)
fillStyle=#7b4fa6
fillRect(940, 560, 660, 4)
fillStyle=#2d1b4e
fillRect(1800, 560, 600, 40)
fillStyle=#7b4fa6
fillRect(1800, 560, 600, 4)
fillStyle=#4a2d7a
fillRect(320, 450, 140, 12)
fillRect(540, 370, 140, 12)
fillRect(840, 410, 120, 12)
fillRect(1200, 430, 140, 12)
fillRect(1640, 400, 130, 12)
fillRect(2000, 420, 140, 12)
fillStyle=#c98f3d
fillRect(450, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(451.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(700, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(701.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1300, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(1301.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1950, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(1951.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1250, 394, 36, 36)
strokeStyle=#8a5f22
strokeRect(1251.5, 395.5, 33, 33)
fillStyle=#cbb8ff
fillRect(2340, 470, 4, 90)
fillStyle=#ffd75e
beginPath()
arc(2342, 466, 5, 0, 6.283)
fill()
fillStyle=#ff6f91
beginPath()
moveTo(2344, 474)
lineTo(2380, 486)
lineTo(2344, 498)
closePath()
fill()
save()
translate(74, 560)
scale(1.104, 0.896)
fillStyle=#fff5fa
fillRect(-14, -24, 28, 18)
fillRect(6, -34, 12, 12)
fillStyle=#ffd75e
beginPath()
moveTo(13, -34)
lineTo(17, -46)
lineTo(19, -34)
closePath()
fill()
fillStyle=#e78fd0
fillRect(2, -34, 5, 14)
fillStyle=#f3d9e6
fillRect(-12, -6, 5, 6)
fillRect(7, -6, 5, 6)
save()
fillStyle=#f5d76e
fillRect(-7, -44, 4, 13)
fillStyle=#8fd3f4
beginPath()
moveTo(-3.5, -31)
lineTo(3.5, -31)
lineTo(6.5, -21)
lineTo(-6.5, -21)
closePath()
fill()
fillRect(-3, -36, 7, 5)
fillStyle=#ffe0c8
fillRect(2, -29, 9, 3)
fillRect(-4, -44, 9, 8)
fillStyle=#3a2b4d
fillRect(1.5, -39.5, 2, 2.5)
fillStyle=#f5d76e
fillRect(-5, -45, 11, 4)
fillStyle=#ffd75e
fillRect(-4.5, -47.5, 10, 3)
beginPath()
moveTo(-4.5, -47.5)
lineTo(-3, -51)
lineTo(-1.5, -47.5)
moveTo(-1, -47.5)
lineTo(0.5, -52)
lineTo(2, -47.5)
moveTo(2.5, -47.5)
lineTo(4, -51)
lineTo(5.5, -47.5)
closePath()
fill()
fillStyle=#ff5e78
fillRect(-0.5, -46.5, 1.5, 1.5)
restore()
restore()
save()
translate(515, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(1005, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(1405, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(2083.5, 546)
scale(1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(2205, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
globalAlpha=0.707
fillStyle=#8d76b8
fillRect(70.24, 556.055, 3.8, 3.8)
globalAlpha=0.756
fillStyle=#8d76b8
fillRect(70.555, 559.15, 2.926, 2.926)
globalAlpha=0.701
fillStyle=#5d4a80
fillRect(68.59, 555.898, 5.457, 5.457)
globalAlpha=0.742
fillStyle=#5d4a80
fillRect(70.037, 559.483, 4.053, 4.053)
globalAlpha=0.735
fillStyle=#8d76b8
fillRect(70.412, 558.579, 2.607, 2.607)
globalAlpha=0.778
fillStyle=#5d4a80
fillRect(73.626, 555.407, 4.189, 4.189)
globalAlpha=1
restore()
restore()
save()
font=18px monospace
textBaseline=top
fillStyle=#ff6f91
fillText(♥, 12, 10)
fillStyle=#ff6f91
fillText(♥, 34, 10)
fillStyle=#ff6f91
fillText(♥, 56, 10)
fillStyle=#6fe3e1
textAlign=right
fillText(SCORE 0, 788, 10)
restore()
save()
font=12px monospace
fillStyle=#5d4a80
textBaseline=bottom
fillText(sound on (M), 12, 592)
restore()"
`;

exports[`walking 1`] = `
"fillStyle=#0d0815
fillRect(0, 0, 800, 600)
save()
translate(0, 0)
save()
translate(-5.476, 0)
fillStyle=#cbb8ff
globalAlpha=0.962
fillRect(728.962, 72.75, 1.213, 1.213)
globalAlpha=0.442
fillRect(151.24, 157.784, 0.811, 0.811)
globalAlpha=0.999
fillRect(273.915, 172.928, 1.366, 1.366)
globalAlpha=0.994
fillRect(1146.497, 221.814, 0.73, 0.73)
globalAlpha=0.97
fillRect(498.546, 196.28, 1.893, 1.893)
globalAlpha=0.886
fillRect(563.833, 61.937, 0.69, 0.69)
globalAlpha=0.674
fillRect(355.791, 328.817, 1.017, 1.017)
globalAlpha=0.892
fillRect(1099.5, 246.005, 0.824, 0.824)
globalAlpha=0.998
fillRect(238.753, 261.197, 1.504, 1.504)
globalAlpha=0.933
fillRect(379.048, 151.803, 1.431, 1.431)
globalAlpha=0.658
fillRect(867.714, 21.967, 1.387, 1.387)
globalAlpha=0.4
fillRect(1146.436, 109.475, 1.844, 1.844)
globalAlpha=0.389
fillRect(293.637, 263.707, 1.418, 1.418)
globalAlpha=0.45
fillRect(796.657, 11.137, 0.945, 0.945)
globalAlpha=0.829
fillRect(851.739, 294.133, 1.699, 1.699)
globalAlpha=0.498
fillRect(907.923, 75.899, 0.945, 0.945)
globalAlpha=0.995
fillRect(1160.027, 4.357, 1.746, 1.746)
globalAlpha=0.358
fillRect(419.298, 50.178, 1.122, 1.122)
globalAlpha=0.569
fillRect(1.408, 47.473, 1.171, 1.171)
globalAlpha=0.93
fillRect(992.396, 69.556, 0.777, 0.777)
globalAlpha=0.976
fillRect(1039.188, 259.132, 1.468, 1.468)
globalAlpha=0.64
fillRect(567.086, 199.79, 0.872, 0.872)
globalAlpha=0.557
fillRect(963.728, 295.418, 0.932, 0.932)
globalAlpha=0.422
fillRect(1070.7, 170.255, 1.742, 1.742)
globalAlpha=0.817
fillRect(513.059, 341.224, 1.164, 1.164)
globalAlpha=0.672
fillRect(237.91, 335.056, 1.619, 1.619)
globalAlpha=0.353
fillRect(434.148, 287.736, 1.187, 1.187)
globalAlpha=0.661
fillRect(1169.223, 228.552, 1.154, 1.154)
globalAlpha=0.935
fillRect(948.147, 184.439, 1.198, 1.198)
globalAlpha=0.585
fillRect(679.501, 279.098, 1.408, 1.408)
globalAlpha=0.775
fillRect(508.65, 145.019, 1.188, 1.188)
globalAlpha=0.592
fillRect(1085.152, 71.674, 1.424, 1.424)
globalAlpha=0.471
fillRect(728.004, 125.356, 1.88, 1.88)
globalAlpha=0.948
fillRect(816.019, 300.117, 1.176, 1.176)
globalAlpha=0.469
fillRect(558.395, 56.119, 1.661, 1.661)
globalAlpha=0.969
fillRect(174.579, 205.053, 1.635, 1.635)
globalAlpha=0.569
fillRect(685.067, 24.284, 0.618, 0.618)
globalAlpha=0.871
fillRect(866.286, 47.936, 1.474, 1.474)
globalAlpha=0.433
fillRect(307.074, 116.424, 1.813, 1.813)
globalAlpha=0.649
fillRect(1025.226, 20.072, 1.788, 1.788)
globalAlpha=0.857
fillRect(1172.858, 237.328, 1.025, 1.025)
globalAlpha=0.731
fillRect(1105.305, 262.581, 0.747, 0.747)
globalAlpha=0.47
fillRect(1117.725, 229.364, 0.895, 0.895)
globalAlpha=0.952
fillRect(744.464, 94.152, 1.329, 1.329)
globalAlpha=0.713
fillRect(525.118, 9.415, 1.846, 1.846)
globalAlpha=0.885
fillRect(432.777, 301.183, 0.709, 0.709)
globalAlpha=0.933
fillRect(313.354, 191.636, 1.987, 1.987)
globalAlpha=0.997
fillRect(167.114, 379.312, 0.905, 0.905)
globalAlpha=0.979
fillRect(723.197, 144.345, 1.53, 1.53)
globalAlpha=0.666
fillRect(268.091, 356.101, 0.824, 0.824)
globalAlpha=0.912
fillRect(114.769, 240.023, 1.857, 1.857)
globalAlpha=0.977
fillRect(970.801, 216.374, 0.85, 0.85)
globalAlpha=0.519
fillRect(981.66, 158.258, 0.963, 0.963)
globalAlpha=0.567
fillRect(566.051, 105.874, 1.555, 1.555)
globalAlpha=0.471
fillRect(522.518, 23, 1.179, 1.179)
globalAlpha=0.667
fillRect(180.779, 221.665, 1.649, 1.649)
globalAlpha=0.956
fillRect(735.758, 356.795, 0.698, 0.698)
globalAlpha=0.619
fillRect(26.876, 205.282, 1.935, 1.935)
globalAlpha=0.608
fillRect(440.13, 160.078, 0.811, 0.811)
globalAlpha=0.752
fillRect(875.624, 133.002, 1.161, 1.161)
globalAlpha=0.988
fillRect(585.972, 292.556, 1.209, 1.209)
globalAlpha=0.437
fillRect(1157.48, 26.237, 1.726, 1.726)
globalAlpha=0.729
fillRect(1087.423, 198.759, 1.995, 1.995)
globalAlpha=0.569
fillRect(194.279, 365.968, 1.602, 1.602)
globalAlpha=0.934
fillRect(397.758, 342.719, 1.016, 1.016)
globalAlpha=0.938
fillRect(945.187, 242.963, 0.904, 0.904)
globalAlpha=0.857
fillRect(457.183, 248.032, 1.197, 1.197)
globalAlpha=0.703
fillRect(112.736, 38.565, 0.645, 0.645)
globalAlpha=0.999
fillRect(681.564, 164.038, 0.663, 0.663)
globalAlpha=0.935
fillRect(962.848, 201.314, 0.921, 0.921)
globalAlpha=0.625
fillRect(842.609, 210.682, 1.251, 1.251)
globalAlpha=0.937
fillRect(941.863, 226.148, 1.487, 1.487)
globalAlpha=0.728
fillRect(67.109, 252.006, 1.817, 1.817)
globalAlpha=0.947
fillRect(339.966, 349.423, 1.983, 1.983)
globalAlpha=0.37
fillRect(658.688, 56.831, 1.58, 1.58)
globalAlpha=0.994
fillRect(837.367, 171.157, 1.608, 1.608)
globalAlpha=1
fillRect(716.324, 125.768, 1.522, 1.522)
globalAlpha=0.581
fillRect(400.323, 169.854, 1.366, 1.366)
globalAlpha=0.408
fillRect(1047.066, 303.681, 1.048, 1.048)
globalAlpha=0.873
fillRect(1157.718, 56.214, 1.427, 1.427)
globalAlpha=0.49
fillRect(260.797, 206.281, 1.938, 1.938)
globalAlpha=0.982
fillRect(983.884, 104.25, 0.719, 0.719)
globalAlpha=0.787
fillRect(138.843, 346.931, 1.665, 1.665)
globalAlpha=0.405
fillRect(893.984, 283.391, 1.308, 1.308)
globalAlpha=0.633
fillRect(915.913, 155.345, 1.394, 1.394)
globalAlpha=0.938
fillRect(106.325, 157.6, 1.047, 1.047)
globalAlpha=0.547
fillRect(275.581, 316.418, 0.651, 0.651)
globalAlpha=0.915
fillRect(1001.744, 214.625, 1.593, 1.593)
globalAlpha=0.918
fillRect(402.764, 371.932, 1.296, 1.296)
globalAlpha=0.558
fillRect(653.935, 86.797, 1.937, 1.937)
globalAlpha=0.521
fillRect(770.51, 190.995, 1.932, 1.932)
globalAlpha=0.948
fillRect(317.695, 182.361, 0.772, 0.772)
globalAlpha=0.775
fillRect(852.984, 101.063, 1.406, 1.406)
globalAlpha=0.482
fillRect(188.219, 297.254, 1.253, 1.253)
globalAlpha=0.975
fillRect(991.48, 199.318, 1.636, 1.636)
globalAlpha=0.466
fillRect(1181.103, 96.537, 0.825, 0.825)
globalAlpha=0.993
fillRect(539.311, 148.73, 1.875, 1.875)
globalAlpha=0.636
fillRect(426.601, 310.453, 1.936, 1.936)
globalAlpha=0.817
fillRect(1031.562, 244.481, 1.668, 1.668)
globalAlpha=0.944
fillRect(147.516, 119.836, 1.435, 1.435)
globalAlpha=0.782
fillRect(25.607, 203.564, 1.085, 1.085)
globalAlpha=0.746
fillRect(921.192, 86.181, 0.65, 0.65)
globalAlpha=0.601
fillRect(1148.189, 122.108, 0.622, 0.622)
globalAlpha=0.743
fillRect(522.004, 215.128, 0.611, 0.611)
globalAlpha=0.764
fillRect(839.528, 268.811, 1.263, 1.263)
globalAlpha=0.535
fillRect(40.889, 350.809, 1.367, 1.367)
globalAlpha=0.358
fillRect(729.449, 169.548, 1.082, 1.082)
globalAlpha=0.917
fillRect(1110.512, 251.539, 1.656, 1.656)
globalAlpha=1
fillRect(517.992, 374.668, 1.047, 1.047)
globalAlpha=0.776
fillRect(387.505, 321.922, 0.784, 0.784)
restore()
save()
translate(-9.584, 0)
fillStyle=#241543
beginPath()
moveTo(-200, 560)
lineTo(-100, 560)
lineTo(-14.836, 418.73)
lineTo(70.329, 560)
lineTo(36.263, 560)
lineTo(187.873, 391.071)
lineTo(339.483, 560)
lineTo(278.839, 560)
lineTo(418.079, 390.476)
lineTo(557.32, 560)
lineTo(501.623, 560)
lineTo(593.072, 450.832)
lineTo(684.52, 560)
lineTo(647.941, 560)
lineTo(755.776, 430.073)
lineTo(863.611, 560)
lineTo(820.477, 560)
lineTo(904.503, 457.786)
lineTo(988.528, 560)
lineTo(954.918, 560)
lineTo(1105.091, 431.899)
lineTo(1255.263, 560)
lineTo(1195.194, 560)
lineTo(1319.076, 373.884)
lineTo(1442.957, 560)
lineTo(1393.405, 560)
lineTo(1511.999, 452.707)
lineTo(1630.594, 560)
lineTo(3000, 560)
closePath()
fill()
restore()
save()
translate(-16.429, 0)
fillStyle=#2f1c55
beginPath()
moveTo(-200, 560)
lineTo(-100, 560)
lineTo(-10.004, 353.87)
lineTo(79.991, 560)
lineTo(43.993, 560)
lineTo(163.422, 305.448)
lineTo(282.851, 560)
lineTo(235.079, 560)
lineTo(360.954, 307.983)
lineTo(486.829, 560)
lineTo(436.479, 560)
lineTo(562.742, 314.442)
lineTo(689.004, 560)
lineTo(638.499, 560)
lineTo(748.332, 411.839)
lineTo(858.164, 560)
lineTo(814.231, 560)
lineTo(915.725, 331.122)
lineTo(1017.218, 560)
lineTo(976.621, 560)
lineTo(1084.506, 318.682)
lineTo(1192.392, 560)
lineTo(1149.237, 560)
lineTo(1242.011, 322.483)
lineTo(1334.784, 560)
lineTo(1297.675, 560)
lineTo(1414.84, 301.852)
lineTo(1532.005, 560)
lineTo(1485.139, 560)
lineTo(1566.512, 324.105)
lineTo(1647.886, 560)
lineTo(1615.337, 560)
lineTo(1702.135, 405.03)
lineTo(1788.934, 560)
lineTo(1754.214, 560)
lineTo(1838.061, 349.011)
lineTo(1921.908, 560)
lineTo(3000, 560)
closePath()
fill()
restore()
save()
translate(-27, 0)
fillStyle=#2d1b4e
fillRect(0, 560, 820, 40)
fillStyle=#7b4fa6
fillRect(0, 560, 820, 4)
fillStyle=#2d1b4e
fillRect(940, 560, 660, 40)
fillStyle=#7b4fa6
fillRect(940, 560, 660, 4)
fillStyle=#2d1b4e
fillRect(1800, 560, 600, 40)
fillStyle=#7b4fa6
fillRect(1800, 560, 600, 4)
fillStyle=#4a2d7a
fillRect(320, 450, 140, 12)
fillRect(540, 370, 140, 12)
fillRect(840, 410, 120, 12)
fillRect(1200, 430, 140, 12)
fillRect(1640, 400, 130, 12)
fillRect(2000, 420, 140, 12)
fillStyle=#c98f3d
fillRect(450, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(451.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(700, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(701.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1300, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(1301.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1950, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(1951.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1250, 394, 36, 36)
strokeStyle=#8a5f22
strokeRect(1251.5, 395.5, 33, 33)
fillStyle=#cbb8ff
fillRect(2340, 470, 4, 90)
fillStyle=#ffd75e
beginPath()
arc(2342, 466, 5, 0, 6.283)
fill()
fillStyle=#ff6f91
beginPath()
moveTo(2344, 474)
lineTo(2380, 486)
lineTo(2344, 498)
closePath()
fill()
save()
translate(436, 560)
scale(1, 1)
fillStyle=#fff5fa
fillRect(-14, -24, 28, 18)
fillRect(6, -34, 12, 12)
fillStyle=#ffd75e
beginPath()
moveTo(13, -34)
lineTo(17, -46)
lineTo(19, -34)
closePath()
fill()
fillStyle=#e78fd0
fillRect(2, -34, 5, 14)
fillStyle=#f3d9e6
fillRect(-12, -6, 5, 6)
fillRect(7, -6, 5, 6)
save()
translate(0, -0.724)
fillStyle=#f5d76e
fillRect(-7, -44, 4, 13)
fillStyle=#8fd3f4
beginPath()
moveTo(-3.5, -31)
lineTo(3.5, -31)
lineTo(6.5, -21)
lineTo(-6.5, -21)
closePath()
fill()
fillRect(-3, -36, 7, 5)
fillStyle=#ffe0c8
fillRect(2, -29, 9, 3)
fillRect(-4, -44, 9, 8)
fillStyle=#3a2b4d
fillRect(1.5, -39.5, 2, 2.5)
fillStyle=#f5d76e
fillRect(-5, -45, 11, 4)
fillStyle=#ffd75e
fillRect(-4.5, -47.5, 10, 3)
beginPath()
moveTo(-4.5, -47.5)
lineTo(-3, -51)
lineTo(-1.5, -47.5)
moveTo(-1, -47.5)
lineTo(0.5, -52)
lineTo(2, -47.5)
moveTo(2.5, -47.5)
lineTo(4, -51)
lineTo(5.5, -47.5)
closePath()
fill()
fillStyle=#ff5e78
fillRect(-0.5, -46.5, 1.5, 1.5)
restore()
restore()
save()
translate(581.5, 546)
scale(1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(1059.5, 546)
scale(1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(1459.5, 546)
scale(1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(2062, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(2229.5, 546)
scale(1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
globalAlpha=1
restore()
restore()
save()
font=18px monospace
textBaseline=top
fillStyle=#ff6f91
fillText(♥, 12, 10)
fillStyle=#ff6f91
fillText(♥, 34, 10)
fillStyle=#ff6f91
fillText(♥, 56, 10)
fillStyle=#6fe3e1
textAlign=right
fillText(SCORE 0, 788, 10)
restore()
save()
font=12px monospace
fillStyle=#5d4a80
textBaseline=bottom
fillText(sound on (M), 12, 592)
restore()"
`;

exports[`win overlay 1`] = `
"fillStyle=#0d0815
fillRect(0, 0, 800, 600)
save()
translate(-0.64, 0.208)
save()
translate(-320, 0)
fillStyle=#cbb8ff
globalAlpha=0.611
fillRect(728.962, 72.75, 1.213, 1.213)
globalAlpha=0.998
fillRect(151.24, 157.784, 0.811, 0.811)
globalAlpha=0.356
fillRect(273.915, 172.928, 1.366, 1.366)
globalAlpha=0.485
fillRect(1146.497, 221.814, 0.73, 0.73)
globalAlpha=0.588
fillRect(498.546, 196.28, 1.893, 1.893)
globalAlpha=0.755
fillRect(563.833, 61.937, 0.69, 0.69)
globalAlpha=0.889
fillRect(355.791, 328.817, 1.017, 1.017)
globalAlpha=0.746
fillRect(1099.5, 246.005, 0.824, 0.824)
globalAlpha=0.448
fillRect(238.753, 261.197, 1.504, 1.504)
globalAlpha=0.678
fillRect(379.048, 151.803, 1.431, 1.431)
globalAlpha=0.899
fillRect(867.714, 21.967, 1.387, 1.387)
globalAlpha=1
fillRect(1146.436, 109.475, 1.844, 1.844)
globalAlpha=1
fillRect(293.637, 263.707, 1.418, 1.418)
globalAlpha=0.984
fillRect(796.657, 11.137, 0.945, 0.945)
globalAlpha=0.822
fillRect(851.739, 294.133, 1.699, 1.699)
globalAlpha=0.992
fillRect(907.923, 75.899, 0.945, 0.945)
globalAlpha=0.386
fillRect(1160.027, 4.357, 1.746, 1.746)
globalAlpha=0.998
fillRect(419.298, 50.178, 1.122, 1.122)
globalAlpha=0.976
fillRect(1.408, 47.473, 1.171, 1.171)
globalAlpha=0.602
fillRect(992.396, 69.556, 0.777, 0.777)
globalAlpha=0.481
fillRect(1039.188, 259.132, 1.468, 1.468)
globalAlpha=0.91
fillRect(567.086, 199.79, 0.872, 0.872)
globalAlpha=0.95
fillRect(963.728, 295.418, 0.932, 0.932)
globalAlpha=0.999
fillRect(1070.7, 170.255, 1.742, 1.742)
globalAlpha=0.768
fillRect(513.059, 341.224, 1.164, 1.164)
globalAlpha=0.936
fillRect(237.91, 335.056, 1.619, 1.619)
globalAlpha=0.999
fillRect(434.148, 287.736, 1.187, 1.187)
globalAlpha=0.941
fillRect(1169.223, 228.552, 1.154, 1.154)
globalAlpha=0.673
fillRect(948.147, 184.439, 1.198, 1.198)
globalAlpha=0.971
fillRect(679.501, 279.098, 1.408, 1.408)
globalAlpha=0.87
fillRect(508.65, 145.019, 1.188, 1.188)
globalAlpha=0.969
fillRect(1085.152, 71.674, 1.424, 1.424)
globalAlpha=0.996
fillRect(728.004, 125.356, 1.88, 1.88)
globalAlpha=0.562
fillRect(816.019, 300.117, 1.176, 1.176)
globalAlpha=0.996
fillRect(558.395, 56.119, 1.661, 1.661)
globalAlpha=0.592
fillRect(174.579, 205.053, 1.635, 1.635)
globalAlpha=0.976
fillRect(685.067, 24.284, 0.618, 0.618)
globalAlpha=0.775
fillRect(866.286, 47.936, 1.474, 1.474)
globalAlpha=0.999
fillRect(307.074, 116.424, 1.813, 1.813)
globalAlpha=0.904
fillRect(1025.226, 20.072, 1.788, 1.788)
globalAlpha=0.791
fillRect(1172.858, 237.328, 1.025, 1.025)
globalAlpha=0.902
fillRect(1105.305, 262.581, 0.747, 0.747)
globalAlpha=0.979
fillRect(1117.725, 229.364, 0.895, 0.895)
globalAlpha=0.552
fillRect(744.464, 94.152, 1.329, 1.329)
globalAlpha=0.913
fillRect(525.118, 9.415, 1.846, 1.846)
globalAlpha=0.756
fillRect(432.777, 301.183, 0.709, 0.709)
globalAlpha=0.595
fillRect(313.354, 191.636, 1.987, 1.987)
globalAlpha=0.454
fillRect(167.114, 379.312, 0.905, 0.905)
globalAlpha=0.559
fillRect(723.197, 144.345, 1.53, 1.53)
globalAlpha=0.894
fillRect(268.091, 356.101, 0.824, 0.824)
globalAlpha=0.635
fillRect(114.769, 240.023, 1.857, 1.857)
globalAlpha=0.478
fillRect(970.801, 216.374, 0.85, 0.85)
globalAlpha=0.964
fillRect(981.66, 158.258, 0.963, 0.963)
globalAlpha=0.946
fillRect(566.051, 105.874, 1.555, 1.555)
globalAlpha=0.996
fillRect(522.518, 23, 1.179, 1.179)
globalAlpha=0.894
fillRect(180.779, 221.665, 1.649, 1.649)
globalAlpha=0.542
fillRect(735.758, 356.795, 0.698, 0.698)
globalAlpha=0.959
fillRect(26.876, 205.282, 1.935, 1.935)
globalAlpha=0.963
fillRect(440.13, 160.078, 0.811, 0.811)
globalAlpha=0.831
fillRect(875.624, 133.002, 1.161, 1.161)
globalAlpha=0.517
fillRect(585.972, 292.556, 1.209, 1.209)
globalAlpha=0.999
fillRect(1157.48, 26.237, 1.726, 1.726)
globalAlpha=0.85
fillRect(1087.423, 198.759, 1.995, 1.995)
globalAlpha=0.945
fillRect(194.279, 365.968, 1.602, 1.602)
globalAlpha=0.676
fillRect(397.758, 342.719, 1.016, 1.016)
globalAlpha=0.585
fillRect(945.187, 242.963, 0.904, 0.904)
globalAlpha=0.72
fillRect(457.183, 248.032, 1.197, 1.197)
globalAlpha=0.869
fillRect(112.736, 38.565, 0.645, 0.645)
globalAlpha=0.361
fillRect(681.564, 164.038, 0.663, 0.663)
globalAlpha=0.592
fillRect(962.848, 201.314, 0.921, 0.921)
globalAlpha=0.918
fillRect(842.609, 210.682, 1.251, 1.251)
globalAlpha=0.67
fillRect(941.863, 226.148, 1.487, 1.487)
globalAlpha=0.85
fillRect(67.109, 252.006, 1.817, 1.817)
globalAlpha=0.563
fillRect(339.966, 349.423, 1.983, 1.983)
globalAlpha=0.997
fillRect(658.688, 56.831, 1.58, 1.58)
globalAlpha=0.483
fillRect(837.367, 171.157, 1.608, 1.608)
globalAlpha=0.42
fillRect(716.324, 125.768, 1.522, 1.522)
globalAlpha=0.972
fillRect(400.323, 169.854, 1.366, 1.366)
globalAlpha=0.992
fillRect(1047.066, 303.681, 1.048, 1.048)
globalAlpha=0.772
fillRect(1157.718, 56.214, 1.427, 1.427)
globalAlpha=0.993
fillRect(260.797, 206.281, 1.938, 1.938)
globalAlpha=0.459
fillRect(983.884, 104.25, 0.719, 0.719)
globalAlpha=0.799
fillRect(138.843, 346.931, 1.665, 1.665)
globalAlpha=0.992
fillRect(893.984, 283.391, 1.308, 1.308)
globalAlpha=0.914
fillRect(915.913, 155.345, 1.394, 1.394)
globalAlpha=0.668
fillRect(106.325, 157.6, 1.047, 1.047)
globalAlpha=0.954
fillRect(275.581, 316.418, 0.651, 0.651)
globalAlpha=0.631
fillRect(1001.744, 214.625, 1.593, 1.593)
globalAlpha=0.705
fillRect(402.764, 371.932, 1.296, 1.296)
globalAlpha=0.95
fillRect(653.935, 86.797, 1.937, 1.937)
globalAlpha=0.988
fillRect(770.51, 190.995, 1.932, 1.932)
globalAlpha=0.561
fillRect(317.695, 182.361, 0.772, 0.772)
globalAlpha=0.81
fillRect(852.984, 101.063, 1.406, 1.406)
globalAlpha=0.994
fillRect(188.219, 297.254, 1.253, 1.253)
globalAlpha=0.571
fillRect(991.48, 199.318, 1.636, 1.636)
globalAlpha=0.996
fillRect(1181.103, 96.537, 0.825, 0.825)
globalAlpha=0.398
fillRect(539.311, 148.73, 1.875, 1.875)
globalAlpha=0.912
fillRect(426.601, 310.453, 1.936, 1.936)
globalAlpha=0.768
fillRect(1031.562, 244.481, 1.668, 1.668)
globalAlpha=0.655
fillRect(147.516, 119.836, 1.435, 1.435)
globalAlpha=0.865
fillRect(25.607, 203.564, 1.085, 1.085)
globalAlpha=0.892
fillRect(921.192, 86.181, 0.65, 0.65)
globalAlpha=0.966
fillRect(1148.189, 122.108, 0.622, 0.622)
globalAlpha=0.838
fillRect(522.004, 215.128, 0.611, 0.611)
globalAlpha=0.82
fillRect(839.528, 268.811, 1.263, 1.263)
globalAlpha=0.959
fillRect(40.889, 350.809, 1.367, 1.367)
globalAlpha=0.998
fillRect(729.449, 169.548, 1.082, 1.082)
globalAlpha=0.707
fillRect(1110.512, 251.539, 1.656, 1.656)
globalAlpha=0.378
fillRect(517.992, 374.668, 1.047, 1.047)
globalAlpha=0.809
fillRect(387.505, 321.922, 0.784, 0.784)
restore()
save()
translate(-560, 0)
fillStyle=#241543
beginPath()
moveTo(-200, 560)
lineTo(-100, 560)
lineTo(-14.836, 418.73)
lineTo(70.329, 560)
lineTo(36.263, 560)
lineTo(187.873, 391.071)
lineTo(339.483, 560)
lineTo(278.839, 560)
lineTo(418.079, 390.476)
lineTo(557.32, 560)
lineTo(501.623, 560)
lineTo(593.072, 450.832)
lineTo(684.52, 560)
lineTo(647.941, 560)
lineTo(755.776, 430.073)
lineTo(863.611, 560)
lineTo(820.477, 560)
lineTo(904.503, 457.786)
lineTo(988.528, 560)
lineTo(954.918, 560)
lineTo(1105.091, 431.899)
lineTo(1255.263, 560)
lineTo(1195.194, 560)
lineTo(1319.076, 373.884)
lineTo(1442.957, 560)
lineTo(1393.405, 560)
lineTo(1511.999, 452.707)
lineTo(1630.594, 560)
lineTo(3000, 560)
closePath()
fill()
restore()
save()
translate(-960, 0)
fillStyle=#2f1c55
beginPath()
moveTo(-200, 560)
lineTo(-100, 560)
lineTo(-10.004, 353.87)
lineTo(79.991, 560)
lineTo(43.993, 560)
lineTo(163.422, 305.448)
lineTo(282.851, 560)
lineTo(235.079, 560)
lineTo(360.954, 307.983)
lineTo(486.829, 560)
lineTo(436.479, 560)
lineTo(562.742, 314.442)
lineTo(689.004, 560)
lineTo(638.499, 560)
lineTo(748.332, 411.839)
lineTo(858.164, 560)
lineTo(814.231, 560)
lineTo(915.725, 331.122)
lineTo(1017.218, 560)
lineTo(976.621, 560)
lineTo(1084.506, 318.682)
lineTo(1192.392, 560)
lineTo(1149.237, 560)
lineTo(1242.011, 322.483)
lineTo(1334.784, 560)
lineTo(1297.675, 560)
lineTo(1414.84, 301.852)
lineTo(1532.005, 560)
lineTo(1485.139, 560)
lineTo(1566.512, 324.105)
lineTo(1647.886, 560)
lineTo(1615.337, 560)
lineTo(1702.135, 405.03)
lineTo(1788.934, 560)
lineTo(1754.214, 560)
lineTo(1838.061, 349.011)
lineTo(1921.908, 560)
lineTo(3000, 560)
closePath()
fill()
restore()
save()
translate(-1600, 0)
fillStyle=#2d1b4e
fillRect(0, 560, 820, 40)
fillStyle=#7b4fa6
fillRect(0, 560, 820, 4)
fillStyle=#2d1b4e
fillRect(940, 560, 660, 40)
fillStyle=#7b4fa6
fillRect(940, 560, 660, 4)
fillStyle=#2d1b4e
fillRect(1800, 560, 600, 40)
fillStyle=#7b4fa6
fillRect(1800, 560, 600, 4)
fillStyle=#4a2d7a
fillRect(320, 450, 140, 12)
fillRect(540, 370, 140, 12)
fillRect(840, 410, 120, 12)
fillRect(1200, 430, 140, 12)
fillRect(1640, 400, 130, 12)
fillRect(2000, 420, 140, 12)
fillStyle=#c98f3d
fillRect(450, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(451.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(700, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(701.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1300, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(1301.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1950, 524, 36, 36)
strokeStyle=#8a5f22
strokeRect(1951.5, 525.5, 33, 33)
fillStyle=#c98f3d
fillRect(1250, 394, 36, 36)
strokeStyle=#8a5f22
strokeRect(1251.5, 395.5, 33, 33)
fillStyle=#cbb8ff
fillRect(2340, 470, 4, 90)
fillStyle=#ffd75e
beginPath()
arc(2342, 466, 5, 0, 6.283)
fill()
fillStyle=#ff6f91
beginPath()
moveTo(2344, 474)
lineTo(2380, 486)
lineTo(2344, 498)
closePath()
fill()
save()
translate(2344, 560)
scale(1, 1)
fillStyle=#fff5fa
fillRect(-14, -24, 28, 18)
fillRect(6, -34, 12, 12)
fillStyle=#ffd75e
beginPath()
moveTo(13, -34)
lineTo(17, -46)
lineTo(19, -34)
closePath()
fill()
fillStyle=#e78fd0
fillRect(2, -34, 5, 14)
fillStyle=#f3d9e6
fillRect(-12, -6, 5, 6)
fillRect(7, -6, 5, 6)
save()
fillStyle=#f5d76e
fillRect(-7, -44, 4, 13)
fillStyle=#8fd3f4
beginPath()
moveTo(-3.5, -31)
lineTo(3.5, -31)
lineTo(6.5, -21)
lineTo(-6.5, -21)
closePath()
fill()
fillRect(-3, -36, 7, 5)
fillStyle=#ffe0c8
fillRect(2, -29, 9, 3)
fillRect(-4, -44, 9, 8)
fillStyle=#3a2b4d
fillRect(1.5, -39.5, 2, 2.5)
fillStyle=#f5d76e
fillRect(-5, -45, 11, 4)
fillStyle=#ffd75e
fillRect(-4.5, -47.5, 10, 3)
beginPath()
moveTo(-4.5, -47.5)
lineTo(-3, -51)
lineTo(-1.5, -47.5)
moveTo(-1, -47.5)
lineTo(0.5, -52)
lineTo(2, -47.5)
moveTo(2.5, -47.5)
lineTo(4, -51)
lineTo(5.5, -47.5)
closePath()
fill()
fillStyle=#ff5e78
fillRect(-0.5, -46.5, 1.5, 1.5)
restore()
restore()
save()
translate(560, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(1050, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(1450, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(2038.5, 546)
scale(1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
save()
translate(2250, 546)
scale(-1, 1)
fillStyle=#5d3a9b
fillRect(-15, -14, 30, 24)
fillStyle=#2d1b4e
fillRect(-13, 10, 8, 4)
fillRect(5, 10, 8, 4)
fillStyle=#fff
fillRect(4, -10, 6, 6)
fillStyle=#e33
fillRect(6, -8, 3, 3)
restore()
globalAlpha=0.744
fillStyle=#6fe3e1
fillRect(2326.28, 491.586, 4.75, 4.75)
globalAlpha=0.787
fillStyle=#ffd75e
fillRect(2325.818, 514.062, 3.658, 3.658)
globalAlpha=0.738
fillStyle=#ff6f91
fillRect(2318.469, 496.089, 6.822, 6.822)
globalAlpha=0.774
fillStyle=#fff
fillRect(2325.493, 520.755, 5.066, 5.066)
globalAlpha=0.768
fillStyle=#6fe3e1
fillRect(2323.524, 508.233, 3.258, 3.258)
globalAlpha=0.806
fillStyle=#fff
fillRect(2355.574, 487.597, 5.236, 5.236)
globalAlpha=0.806
fillStyle=#ff6f91
fillRect(2357.993, 529.42, 3.796, 3.796)
globalAlpha=0.82
fillStyle=#ff6f91
fillRect(2325.962, 518.907, 4.598, 4.598)
globalAlpha=0.83
fillStyle=#ff6f91
fillRect(2338.439, 486.42, 5.249, 5.249)
globalAlpha=0.81
fillStyle=#ffd75e
fillRect(2333.805, 533.713, 5.617, 5.617)
globalAlpha=0.761
fillStyle=#ffd75e
fillRect(2324.768, 493.838, 5.656, 5.656)
globalAlpha=0.817
fillStyle=#fff
fillRect(2320.066, 484.237, 6.096, 6.096)
globalAlpha=0.831
fillStyle=#ffd75e
fillRect(2342.828, 484.479, 3.985, 3.985)
globalAlpha=0.745
fillStyle=#6fe3e1
fillRect(2370.602, 505.086, 6.648, 6.648)
globalAlpha=0.782
fillStyle=#ffd75e
fillRect(2323.595, 524.11, 3.005, 3.005)
globalAlpha=0.788
fillStyle=#ffd75e
fillRect(2332.207, 475.92, 3.732, 3.732)
globalAlpha=0.789
fillStyle=#fff
fillRect(2359.742, 482.808, 5.479, 5.479)
globalAlpha=0.817
fillStyle=#fff
fillRect(2321.92, 500.438, 5.273, 5.273)
globalAlpha=0.82
fillStyle=#6fe3e1
fillRect(2342.854, 529.117, 6.569, 6.569)
globalAlpha=0.793
fillStyle=#6fe3e1
fillRect(2353.381, 522.806, 6.592, 6.592)
globalAlpha=0.776
fillStyle=#ff6f91
fillRect(2350.962, 532.717, 5.911, 5.911)
globalAlpha=0.802
fillStyle=#fff
fillRect(2343.273, 481.074, 3.571, 3.571)
globalAlpha=0.784
fillStyle=#6fe3e1
fillRect(2324.921, 515.423, 6.16, 6.16)
globalAlpha=0.811
fillStyle=#ff6f91
fillRect(2352.093, 479.925, 5.938, 5.938)
globalAlpha=0.827
fillStyle=#fff
fillRect(2321.421, 514.403, 4.68, 4.68)
globalAlpha=0.772
fillStyle=#ff6f91
fillRect(2351.957, 528.635, 3.81, 3.81)
globalAlpha=0.782
fillStyle=#fff
fillRect(2357.733, 493.467, 5.72, 5.72)
globalAlpha=0.808
fillStyle=#fff
fillRect(2318.946, 511.059, 3.591, 3.591)
globalAlpha=0.799
fillStyle=#6fe3e1
fillRect(2356.53, 523.391, 5.958, 5.958)
globalAlpha=0.744
fillStyle=#ff6f91
fillRect(2356.493, 509.89, 5.787, 5.787)
globalAlpha=0.824
fillStyle=#6fe3e1
fillRect(2326.874, 489.253, 4.024, 4.024)
globalAlpha=0.798
fillStyle=#fff
fillRect(2326.386, 478.569, 3.211, 3.211)
globalAlpha=0.828
fillStyle=#6fe3e1
fillRect(2368.427, 500.346, 4.216, 4.216)
globalAlpha=0.802
fillStyle=#fff
fillRect(2334.414, 486.277, 5.966, 5.966)
globalAlpha=0.794
fillStyle=#ffd75e
fillRect(2347.812, 529.294, 5.482, 5.482)
globalAlpha=0.814
fillStyle=#fff
fillRect(2319.736, 511.536, 3.099, 3.099)
globalAlpha=0.763
fillStyle=#fff
fillRect(2323.399, 527.308, 3.311, 3.311)
globalAlpha=0.833
fillStyle=#ffd75e
fillRect(2307.735, 501.932, 6.858, 6.858)
globalAlpha=0.807
fillStyle=#6fe3e1
fillRect(2345.847, 525.815, 5.411, 5.411)
globalAlpha=0.733
fillStyle=#ffd75e
fillRect(2352.612, 486.634, 6.748, 6.748)
globalAlpha=1
restore()
restore()
save()
font=18px monospace
textBaseline=top
fillStyle=#ff6f91
fillText(♥, 12, 10)
fillStyle=#ff6f91
fillText(♥, 34, 10)
fillStyle=#ff6f91
fillText(♥, 56, 10)
fillStyle=#6fe3e1
textAlign=right
fillText(SCORE 0, 788, 10)
restore()
save()
fillStyle=rgba(13, 8, 21, 0.7)
fillRect(0, 0, 800, 600)
fillStyle=#ffd75e
textAlign=center
font=28px monospace
fillText(LEVEL CLEAR!, 400, 276)
font=16px monospace
fillStyle=#cbb8ff
fillText(score 0 - press R to play again, 400, 312)
restore()
save()
font=12px monospace
fillStyle=#5d4a80
textBaseline=bottom
fillText(sound on (M), 12, 592)
restore()"
`;
